--- a/Kaiserreich Korean Translation/localisation/KR_Equipment_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Equipment_l_english.yml
@@ -120,17 +120,17 @@ UNIT_GENERIC_NAME_JAP:0 "$NR$ $NAME$"
 UNIT_GENERIC_NAME_SOV:0 "$NR$ya $NAME$"
 
 tank_armor_upgrade:0 "장갑"
-tank_armor_upgrade_desc:0 "Better armour than your enemies can penetrate is a huge advantage to your divisions but is probably going to slow you down."
+tank_armor_upgrade_desc:0 "적들이 관통할 수 없을 정도로 두꺼운 장갑은 당신의 사단에게 큰 이점이지만, 당신을 더 느려지게 할 것입니다."
 tank_gun_upgrade:0 "주포"
-tank_gun_upgrade_desc:0 "It's important to have a gun that keep up with enemy armour strength and can penetrate."
+tank_gun_upgrade_desc:0 "적들의 장갑 두께에 발맞추며 그것을 관통할 수 있는 주포를 확보하는 것은 중요합니다."
 tank_aa_upgrade:0 "대공 장비"
-tank_aa_upgrade_desc:0 "Ensure that our Anti-Air Armament is able to shoot down the latest planes."
+tank_aa_upgrade_desc:0 "우리의 대공 무기가 확실히 최신 비행기들을 격추할 수 있도록 하십시오."
 tank_at_upgrade:0 "대전차 장비"
-tank_at_upgrade_desc:0 "Ensure that our tank destroyers can defeat the latest enemy tanks."
+tank_at_upgrade_desc:0 "우리의 대전차 자주포가 확실히 최신예 적 전차를 이길 수 있도록 하십시오."
 tank_art_upgrade:0 "포병 장비"
-tank_art_upgrade_desc:1 "Ensure that our self propelled artillery have massive firepower that will tear through any unarmored enemies."
+tank_art_upgrade_desc:1 "우리의 자주포가 확실히 어떤 비장갑 목표든지 찢어버릴 수 있는 엄청난 화력을 확보할 수 있도록 하십시오."
 tank_reliability_upgrade:0 "신뢰도"
-tank_reliability_upgrade_desc:0 "Improving reliability leads to less broken down tanks you'll need to replace."
+tank_reliability_upgrade_desc:0 "신뢰도를 개선하는 것은 당신이 교체해야 할 고장난 전차가 줄어드는 것으로 이어집니다."
 tank_engine_upgrade:0 "엔진"
 tank_engine_upgrade_desc:0 "More mobility give tactical and strategic advantages, as well as allowing more armour without being slowed down significantly."
 ship_gun_upgrade:0 "함포"
