--- a/Kaiserreich Korean Translation/localisation/KR_Georgia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Georgia_l_english.yml
@@ -2,8 +2,8 @@ l_english:
 
 ### Events ###
 geo.1.t:0 "조지아 사회주의 공화국"
-geo.1.d:0 "조지아는 1918년 브레스트-리토프스크 조약에 의해 탄생했으며, 국가는 적백내전의 직접적인 영향을 받아 혼란에 빠졌다는 것을 알게됬습니다. 조지아는 신속히 멘셰비키당의 거점이 됬고, 적백내전 동안 중립을 유지하여, 백군과 적군의 충돌을 피할 수 있었습니다. 현재 권력을 쥐고 있는 멘셰비키당은 일부 볼셰비키와 사회 혁명운동가들과 함께 새로운 '코카시안' 사회주의의 브랜드를 만들고, 새로운 의회를 창설했습니다. 1920년대에 국가의 산업기반은 놀랍도록 성장했지만, 라브렌티 베리아와 요세브 주가슈빌리 같은 볼셰비키 인사들과 통합하여, 멘셰비키당은 매우 급진적이게 되었습니다. 공화국의 구 민주주의 체재는 서서히 해체되었고, '내부 안보 서비스'가 정치에 관여하게 되었습니다. 곧 국가의 민주 헌법은 유명무실해졌고, 라브렌티 베리아가 이끄는 최고 경제협의회가 권력을 장악하게 되었습니다. 지역 농민과 상당수의 군인들은 국가의 전체주의에 동요되기 시작했으며, 베리아는 다른 코카서스 국가들로 확장하기 위해 눈여겨보기 시작했습니다. 미래가 어떻든간에, 조지아의 미래는 불확실합니다."."
+geo.1.d:0 "조지아는 1918년 브레스트-리토프스크 조약에 의해 탄생했으며, 국가는 적백내전의 직접적인 영향을 받아 혼란에 빠졌다는 것을 알게됬습니다. 조지아는 신속히 멘셰비키당의 거점이 됬고, 적백내전 동안 중립을 유지하여, 백군과 적군의 충돌을 피할 수 있었습니다. 현재 권력을 쥐고 있는 멘셰비키당은 일부 볼셰비키와 사회 혁명운동가들과 함께 새로운 '코카시안' 사회주의의 브랜드를 만들고, 새로운 의회를 창설했습니다. 1920년대에 국가의 산업기반은 놀랍도록 성장했지만, 라브렌티 베리야와 요세브 주가슈빌리 같은 볼셰비키 인사들과 통합하여, 멘셰비키당은 매우 급진적이게 되었습니다. 공화국의 구 민주주의 체재는 서서히 해체되었고, '내부 안보 서비스'가 정치에 관여하게 되었습니다. 곧 국가의 민주 헌법은 유명무실해졌고, 라브렌티 베리야가 이끄는 최고 경제협의회가 권력을 장악하게 되었습니다. 지역 농민과 상당수의 군인들은 국가의 전체주의에 동요되기 시작했으며, 베리야는 다른 코카서스 국가들로 확장하기 위해 눈여겨보기 시작했습니다. 미래가 어떻든간에, 조지아의 미래는 불확실합니다."
 geo.1.a:0 "흥미롭군..."
-geo.2.t:0 "라브렌티 베리아가 움직이기 시작했다"
-geo.2.d:0 "After joining the Menshevik party in 1921 and curbing a Bolshevik revolt, Lavrenti Beria preceded to rise in the ranks of the Georgian government. In 1931, Beria was appointed General Secretary of the Menshevik Party, allowing him to be very influential in the government, pushing for industrialisation and creating an immense bureaucratic administration to control the country. By 1936, the Supreme Economic Council that de facto governs the Georgian government is firmly under the control of Beria, and he is in a position to effectively seize control of the government from the current Chairman, Grigol Ordzhonikidze."
-geo.2.a:0 "베리아가 정부를 완전히 장악했다!"
+geo.2.t:0 "라브렌티 베리야가 움직이기 시작했다"
+geo.2.d:0 "1921년 멘셰비키당에 입당하여 볼셰비키 폭동을 진압한 후, 라브렌티 베리야는 조지아 정부에서 높은 지위에 오르기 위해 앞서갔습니다. 1931년, 베리야는 멘셰비키당 서기장에 임명되었습니다. 그는 산업화를 추진하고 나라를 통치하기 위한 거대한 관료 주의를 만들어 내며 정부에서 큰 영향력을 가지게 되었습니다. 1936년까지 사실상 조지아 정부를 통치하는 최고 경제협의회가 베리야의 통제하에 있으며, 현 위원장인 그리고르 오르조니키제로부터 사실상 정권을 찬탈할 수 있는 위치에 있습니다."
+geo.2.a:0 "베리야가 정부를 완전히 장악했다!"
