--- a/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
@@ -1,14 +1,14 @@
 l_english:
 
 ### Parties ###
-SAF_totalist_party:0 "Totalist Party"
+SAF_totalist_party:0 "전체주의당"
 SAF_radical_socialist_party:0 "ISL"
-SAF_syndicalist_party:0 "Communist Party"
-SAF_social_democrat_party:0 "Labour Party"
-SAF_social_liberal_party:0 "Liberal Party"
-SAF_market_liberal_party:0 "Progressive Party"
-SAF_social_conservative_party:0 "Dominion Party"
-SAF_authoritarian_democrat_party:0 "National Party"
+SAF_syndicalist_party:0 "공산당"
+SAF_social_democrat_party:0 "노동당"
+SAF_social_liberal_party:0 "자유당"
+SAF_market_liberal_party:0 "진보당"
+SAF_social_conservative_party:0 "자치당"
+SAF_authoritarian_democrat_party:0 "국민당"
 SAF_paternal_autocrat_party:0 "Gesuiwerde"
 SAF_national_populist_party:0 "Afrikaner Bond"
 SAF_totalist_party_long:0 "Totalist Party of South Africa"
@@ -28,15 +28,15 @@ SAF_social_conservative_party_long_Con:0 "South African Conservative Party"
 
 ### Focuses ###
 
-SAF_black_monday_crisis:0 "Recovery from Black Monday?"
+SAF_black_monday_crisis:0 "검은 월요일에서의 회복"
 SAF_black_monday_crisis_desc:0 "The economic crisis threatens to tear the Union apart. We must reform our country's economy to solve mass unemployment, but the Volksraad stands divided on the path to take forwards. This choice will certainly have repercussions in the years to come, and may even exacerbate existing divides."
 SAF_representation_natives_act:0 "Representation of Natives Act"
 SAF_representation_natives_act_desc:0 "Originally planned before the current economic crisis took hold, the Representation of Natives Act of 1936 will become the centrepiece of upcoming social and political reforms within the country. The original provisions will probably have to be altered significantly, however."
 SAF_paramount_chiefs:0 "Establish the Paramount Chiefs"
 SAF_paramount_chiefs_desc:0 "Granting autonomy to the local rulers of the former HCTs will allow us to install new, autonomous Paramount Chiefs of their respective ethnic groups (the Tswana in Bechuanaland, the Basotho in Basotuland and the Swazi in Swaziland) loyal to the central government."
-SAF_develop_provinces:0 "Develop the Protectorates"
+SAF_develop_provinces:0 "보호령 개발"
 SAF_develop_provinces_desc:0 "The crown protectorates are perhaps the least-developed regions in the Union - it is vital that we develop their infrastructure to maintain pace with the rest of the country."
-SAF_develop_provinces_2:0 "Continue Developing the Protectorates"
+SAF_develop_provinces_2:0 "보호령 지속 개발"
 SAF_develop_provinces_2_desc:0 "With the infrastructure of the protectorates developed, we can now focus on developing their industry - as well as the industry of the surrounding areas, for which the protectorates often serve as a source of cheap labour."
 SAF_native_autonomy:0 "The Question of Native Autonomy"
 SAF_native_autonomy_desc:0 "We have decided to grant autonomy to the local rulers of the former High Commission Territories, the new Paramount Chiefs of the respective ethnic groups (the Tswana in Bechuanaland, the Basotho in Basotuland and the Swazi in Swaziland). But we need to clarify the extent of the Chiefs power - is it limited to within the borders of the former HCT or does it encompass all of their peoples throughout South Africa?"
@@ -50,26 +50,26 @@ SAF_nuweveld_settlements:0 "Begin Settling the Nuweveld"
 SAF_nuweveld_settlements_desc:0 "The annexation of new territory is only the first step - now we must actually develop those lands, and ensure that they are finally being put to productive use."
 SAF_expand_mines:0 "Mining the Nuweveld"
 SAF_expand_mines_desc:0 "The new reserves of native labour allow us to significantly expand our mining capacity in the Nuweveld, giving us the potential of producing ores on an industrial scale."
-SAF_native_labour:0 "Native Labour"
+SAF_native_labour:0 "원주민 노동자"
 SAF_native_labour_desc:0 "The integration of the Nuweveld territories and the desperate need for cheap and plentiful labour in those regions has raised the issue of Native rights. Many politicians are now ready to make radical compromises in a few categories."
 SAF_expand_steelworks:0 "Vanderbijlpark's Steelworks"
 SAF_expand_steelworks_desc:0 "The new reserves of native labour allow us to significantly expand South Africa's steel production with a new large-scale facility at Vanderbijlpark."
 SAF_kariba_dam:0 "The Kariba Dam"
 SAF_kariba_dam_desc:0 "Finishing the Kariba Dam will take long and arduous work, but it will provide plenty of energy for our expanding industry in Rhodesia."
 
-SAF_industrialization:0 "Focus on Industrialisation"
+SAF_industrialization:0 "산업화에 집중"
 SAF_industrialization_desc:0 "The Gesuiwerde are pushing for increased industrialisation, but the cost at this stage could be prohibitive. Nevertheless, we must push forwards to solve the current crisis."
 SAF_new_resources_1:0 "Industrial Mining"
 SAF_new_resources_1_desc:0 "Industrialisation continues at an impressive pace with new mines opening every month across the Orange Free State and the Transvaal. The roads of Johannesburg and Pretoria equal that of any European city. But there is discontent rising from the British provinces, who believe that our program is unfairly weighted towards the Afrikaans speaking areas."
-SAF_industrialization_1:0 "The Witwatersrand Basin"
+SAF_industrialization_1:0 "비트바테르스란트 분지"
 SAF_industrialization_1_desc:0 "We have begun our efforts to further industrialise our nation. Through the entire Witwatersrand basin roads and railway tracks are being built and new steel mills constructed, bringing thousands back into the workforce."
-SAF_shipbuilding_1:0 "Expand the Cape Dockyards"
+SAF_shipbuilding_1:0 "케이프 항구 확장"
 SAF_shipbuilding_1_desc:0 "One obvious place we can develop our industry is in the shipbuilding sector of Cape Town - the dockyards are sorely in need of updating and expansion, and increasing their capacity will put a large number of people to work."
 SAF_entente_help:0 "Seek Help from the Entente"
 SAF_entente_help_desc:0 "In an effort to bring our economy back from the crash brought on by German trade dependence, the Dominion Party has suggested looking back towards the old empires for new trade opportunities. It is hoped that in so doing, British and French investment will create job opportunities for South Africa's unemployed."
 SAF_foreign_investment:0 "Encourage Foreign Investment"
 SAF_foreign_investment_desc:0 "Now that the Entente has normalised trade, the time has come to entice their investors to come to South Africa and help us in the industrialisation process."
-SAF_new_resources_2:0 "Kimberley Mines"
+SAF_new_resources_2:0 "킴벌리 광산"
 SAF_new_resources_2_desc:0 "The influx of capital from the Entente continues to grow our economy. New mines have opened in Kimberley, but some members of the Gesuiwerde and even our own party have spoken out against the clear focus on British dominated parts of the country."
 SAF_work_programs:0 "Establish Work Programs"
 SAF_work_programs_desc:0 "The majority of the party is in support of a general work program for the unemployed, this being a safe bet to get our economy back on its feet once again."
@@ -88,7 +88,7 @@ SAF_military_focus_desc:0 "With Black Monday behind us, our focus should be on o
 SAF_trade_focus:0 "Focus on Trade"
 SAF_trade_focus_desc:0 "With Black Monday behind us, we should renew our efforts to keep trade going. Despite the wishes of some, we cannot cut ourselves off from the world. South Africa is a small country, in the bigger picture, and it relies on trade with larger nations to remain vital."
 
-SAF_1938_elections:0 "The 1938 General Elections"
+SAF_1938_elections:0 "1938년 총선"
 SAF_1938_elections_desc:0 "Scheduled to take place in May of 1938, the South African General Elections will probably be the most polarised our country has ever seen, with two radically different views of our country's future in play. The stakes are high, as whoever wins will choose the path forward, and there are no obvious favourites yet."
 
 SAF_nationalist_victory:0 "National Party Victory!"
@@ -250,38 +250,38 @@ SAF_rule_the_seas_desc:0 "Our primary focus is on our navy - yes, this may come 
 
 ### Ideas ###
 
-SAF_black_monday_1:0 "Effects of Black Monday"
+SAF_black_monday_1:0 "검은 월요일의 영향"
 SAF_black_monday_1_desc:0 "Black Monday has struck our country harshly due to our dependence on German trade. Unrest is growing and our economy falters, we must find ambitious solutions to this problem, and quickly!"
-SAF_black_monday_2:0 "Effects of Black Monday"
+SAF_black_monday_2:0 "검은 월요일의 영향"
 SAF_black_monday_2_desc:0 "Black Monday has struck our country harshly due to our dependence on German trade. Unrest is growing and our economy falters, we must find ambitious solutions to this problem, and quickly!"
-SAF_segregation_1:0 "Racial Segregation"
-SAF_segregation_1_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvaal and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
-SAF_segregation_2:0 "Racial Segregation"
-SAF_segregation_2_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvaal and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
-SAF_segregation_3:0 "Racial Segregation"
-SAF_segregation_3_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvaal and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
-SAF_segregation_4:0 "Racial Segregation"
-SAF_segregation_4_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvaal and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
-SAF_segregation_5:0 "Racial Segregation"
-SAF_segregation_5_desc:0 "South Africa is a divided nation. While the vast majority of the population belongs to the various native ethnic African groups, socio-economic power is held by the white European minority. This in turn is divided between the Afrikaners, Dutch-speaking descendants of the original Dutch colonists and the Boers who settled the Transvaal and Orange Free State, and the British who form the majority of the white population in Natal and Rhodesia."
-SAF_apartheid_1:0 "Apartheid"
-SAF_apartheid_2:0 "Apartheid"
-SAF_divided_government_1:0 "Divided Government"
-SAF_divided_government_1_desc:0 "South Africa current stands at a crossroads, one where it must decide its path forward either as an independent Afrikaner nation under the dominance of its white minority or as a liberal federation and member of the British Commonwealth. This is represented by the two main parties vying for control over the government: the Nationalist Party and the Dominion Party. The question stands to be resolved in the 1938 election."
-SAF_divided_government_2:0 "Divided Government"
-SAF_divided_government_2_desc:0 "South Africa current stands at a crossroads, one where it must decide its path forward either as an independent Afrikaner nation under the dominance of its white minority or as a liberal federation and member of the British Commonwealth. This is represented by the two main parties vying for control over the government: the Nationalist Party and the Dominion Party. The question stands to be resolved in the 1938 election."
-SAF_divided_government_3:0 "Divided Government"
-SAF_divided_government_3_desc:0 "South Africa current stands at a crossroads, one where it must decide its path forward either as an independent Afrikaner nation under the dominance of its white minority or as a liberal federation and member of the British Commonwealth. This is represented by the two main parties vying for control over the government: the Nationalist Party and the Dominion Party. The question stands to be resolved in the 1938 election."
+SAF_segregation_1:0 "인종 분리 정책"
+SAF_segregation_1_desc:0 "남아프리카는 분열된 국가입니다. 대부분의 국민은 여러 아프리카 토착 민족에 속하지만, 경제적 사회적 권력은 소수의 유럽 백인들이 장악하고 있습니다. 백인들은 또다시 네덜란드 식민지 개척자들의 후손들인 아프리카너, 트란스발과 오렌지 자유국에 정착한 보어인, 나탈과 로데시아에서 백인들중 대부분을 차지하는 영국인으로 나뉩니다."
+SAF_segregation_2:0 "인종 분리 정책"
+SAF_segregation_2_desc:0 "남아프리카는 분열된 국가입니다. 대부분의 국민은 여러 아프리카 토착 민족에 속하지만, 경제적 사회적 권력은 소수의 유럽 백인들이 장악하고 있습니다. 백인들은 또다시 네덜란드 식민지 개척자들의 후손들인 아프리카너, 트란스발과 오렌지 자유국에 정착한 보어인, 나탈과 로데시아에서 백인들중 대부분을 차지하는 영국인으로 나뉩니다."
+SAF_segregation_3:0 "인종 분리 정책"
+SAF_segregation_3_desc:0 "남아프리카는 분열된 국가입니다. 대부분의 국민은 여러 아프리카 토착 민족에 속하지만, 경제적 사회적 권력은 소수의 유럽 백인들이 장악하고 있습니다. 백인들은 또다시 네덜란드 식민지 개척자들의 후손들인 아프리카너, 트란스발과 오렌지 자유국에 정착한 보어인, 나탈과 로데시아에서 백인들중 대부분을 차지하는 영국인으로 나뉩니다."
+SAF_segregation_4:0 "인종 분리 정책"
+SAF_segregation_4_desc:0 "남아프리카는 분열된 국가입니다. 대부분의 국민은 여러 아프리카 토착 민족에 속하지만, 경제적 사회적 권력은 소수의 유럽 백인들이 장악하고 있습니다. 백인들은 또다시 네덜란드 식민지 개척자들의 후손들인 아프리카너, 트란스발과 오렌지 자유국에 정착한 보어인, 나탈과 로데시아에서 백인들중 대부분을 차지하는 영국인으로 나뉩니다."
+SAF_segregation_5:0 "인종 분리 정책"
+SAF_segregation_5_desc:0 "남아프리카는 분열된 국가입니다. 대부분의 국민은 여러 아프리카 토착 민족에 속하지만, 경제적 사회적 권력은 소수의 유럽 백인들이 장악하고 있습니다. 백인들은 또다시 네덜란드 식민지 개척자들의 후손들인 아프리카너, 트란스발과 오렌지 자유국에 정착한 보어인, 나탈과 로데시아에서 백인들중 대부분을 차지하는 영국인으로 나뉩니다."
+SAF_apartheid_1:0 "아파르트헤이트"
+SAF_apartheid_2:0 "아파르트헤이트"
+SAF_divided_government_1:0 "분열된 정부"
+SAF_divided_government_1_desc:0 "현재 남아프리카는 소수 백인들의 지배 아래에서 독립 아프리카너인 국가로 나아갈지, 아니면 자유 연방으로써 영연방의 일원으로 남아있을지 선택의 기로에 서 있습니다. 두 주요 정당, 국민당과 자치당이 각각의 선택을 대표하며 정부의 지배권을 놓고 경쟁하고 있습니다. 이 문제는 1938년 선거에서 해결될 것입니다."
+SAF_divided_government_2:0 "분열된 정부"
+SAF_divided_government_2_desc:0 "현재 남아프리카는 소수 백인들의 지배 아래에서 독립 아프리카너인 국가로 나아갈지, 아니면 자유 연방으로써 영연방의 일원으로 남아있을지 선택의 기로에 서 있습니다. 두 주요 정당, 국민당과 자치당이 각각의 선택을 대표하며 정부의 지배권을 놓고 경쟁하고 있습니다. 이 문제는 1938년 선거에서 해결될 것입니다."
+SAF_divided_government_3:0 "분열된 정부"
+SAF_divided_government_3_desc:0 "현재 남아프리카는 소수 백인들의 지배 아래에서 독립 아프리카너인 국가로 나아갈지, 아니면 자유 연방으로써 영연방의 일원으로 남아있을지 선택의 기로에 서 있습니다. 두 주요 정당, 국민당과 자치당이 각각의 선택을 대표하며 정부의 지배권을 놓고 경쟁하고 있습니다. 이 문제는 1938년 선거에서 해결될 것입니다."
 SAF_nuweveld:0 "The Nuwevald"
 SAF_nuweveld_desc:0 "The Nuweveld Settlements allow us to better organise the old tribal farmlands under the supervision of white settlers, while forcing the Natives to migrate to the cities to find work in our industry. A win-win situation for our economy."
-SAF_native_labour:0 "Native Labour"
+SAF_native_labour:0 "원주민 노동자"
 SAF_native_labour_desc:0 "With some Native right suspended in the Nuweveld, productivity has increased noticeably and major projects are being planned. Of course, the Native workers aren't too happy by this state of affairs, but they aren't the ones wielding the rifles."
-SAF_entente_investment:0 "Entente Investment"
-SAF_trade_focus_idea:0 "Focus on Trade"
+SAF_entente_investment:0 "협상국의 투자"
+SAF_trade_focus_idea:0 "무역에 집중"
 SAF_broderbond_idea:0 "The Broederbond"
-SAF_defense_focus_idea:0 "Focus on Defence"
-SAF_african_gold_idea:0 "South African Gold"
-SAF_expansionism_idea:0 "The New Expansionism"
+SAF_defense_focus_idea:0 "방어에 집중"
+SAF_african_gold_idea:0 "남아프리카 황금"
+SAF_expansionism_idea:0 "신팽창주의"
 SAF_native_service_idea:0 "Native Service"
 SAF_in_civil_war:0 "The Civil War Begins"
 SAF_morale_boost:0 "Morale Boost"
@@ -388,7 +388,7 @@ saf.18.a:0 "Bastards!"
 saf.25.t:0 "The Port Elizabeth Declaration"
 saf.25.d:0 "Today in Port Elizabeth, the leading figures of the Dominion Party, General Jan C Smuts and Jan Hofmeyer, along with the provincial governors of the Cape, Natal and Rhodesia met to discuss the coming election in May. An agreement has been reached now that support for the Dominion Party and dissatisfaction with the ruling Nationalist govt has reached the point where the pro British faction could form the next administration. To that end, they have issued a deceleration, stating their intent to reform the Union of South Africa into a new more liberal Federation and to pursue a reconciliation with the British Empire."
 saf.25.a:0 "Hmmm..."
-saf.26.t:0 "The 1938 General Elections"
+saf.26.t:0 "1938년 총선"
 saf.26.d:0 "The 1938 Union of South Africa General Elections have clearly transformed into a referendum on the country's future. Either the Nationalists will retain control of the Volksraad and set about solidifying white, Afrikaner rule through a full system of Apartheid or they will be defeated by the Dominion Party who will move to fully enact the Port Elizabeth Declaration and the formation of a new, federal South Africa.\n\nIn what is likely to become the most important election in the nation's history, tensions are running high as reports of violent incidents throughout the country increase with each passing day."
 saf.26.a:0 "The National Party Wins!"
 saf.26.b:0 "The Dominion Party Wins!"
