--- a/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
@@ -5,60 +5,60 @@ black.1.t:0 "이것은 여기에 있는 것이 아닙니다!"
 black.1.d:0 "이것을 보시면, 파라독스 포럼에 보고해 주세요!"
 black.1.a:0 "진지하게 보고해주세요!"
 black.2.t:0 "검은 월요일"
-black.2.d:0 "1936 년 2 월 3 일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
+black.2.d:0 "1936 년 2월 3일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
 black.2.a:0 "하느님 맙소사."
 black.3.t:0 "검은 월요일"
-black.3.d:0 "1936 년 2 월 3 일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
+black.3.d:0 "1936 년 2월 3일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
 black.3.a:0 "하느님 맙소사."
 black.4.t:0 "뱅크런"
-black.4.d:0 "베를린 주식 시장의 붕괴로 당황한 독일 시민들은 자산을 출금시키기 위해 은행에 달려들고 있습니다. 은행은 그러한 액수를 내줄 여유가 없으며 많은 은행들이 붕괴 될 위험에 처해 있습니다. 이 전례없는 금융 위기를 안정시키기 위해 즉각적인 정부 개입을 요구하는 사람들이 많습니다."
+black.4.d:0 "베를린 주식 시장의 붕괴로 당황한 독일 시민들은 자산을 출금하기 위해 은행으로 달려들고 있습니다. 은행은 그러한 액수를 내줄 여유가 없으며 많은 은행들이 무너질 위험에 처해 있습니다. 이 전례없는 금융 위기를 안정시키기 위해 즉각적인 정부 개입을 요구하는 사람들이 많습니다."
 black.4.a:0 "일시적으로 은행을 닫아라."
 black.4.b:0 "개인의 재산을 보장하라."
 black.4.c:0 "아무것도 하지 말아라."
 black.5.t:0 "검은 일주일(Black week)이 끝나다."
-black.5.d:0 "검은 일주일이라고 알려진 기간의 시작이었던 검은 월요일 다음 날에는 상황이 거의 개선되지 않았습니다. 사람들이 주식이 쓸모 없게되기 전에 급매하려고하자 주식의 폭락이 사상 최고치에 도달했습니다. 이번 주말에 끝났을 때 독일의 주요 경제 전문가와 최고 경영자가 자살을 했고, 시장은 죽었습니다. 독일 정부는 행동해야합니다."
+black.5.d:0 "검은 일주일이라고 알려진 기간의 시작이었던 검은 월요일 다음 날에는 상황이 거의 개선되지 않았습니다. 사람들이 주식이 쓸모 없게되기 전에 급매하려고하자 주식의 폭락이 사상 최고치에 도달했습니다. 이번 주말에 끝났을 때 독일의 주요 경제 전문가와 최고 경영자가 자살을 했고, 시장은 죽었습니다. 독일 정부는 행동해야 합니다."
 black.5.a:0 "우리는 경제를 개혁해야한다."
-black.6.t:0 "검은 월요일 이후 6 개월"
-black.6.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.6.t:0 "검은 월요일 이후 6개월"
+black.6.d:0 "검은 월요일과 검은 일주일 이후 6개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률 상승입니다."
 black.6.a:0 "실업률이 매우 높다."
-black.7.t:0 "검은 월요일 이후 6 개월"
-black.7.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.7.t:0 "검은 월요일 이후 6개월"
+black.7.d:0 "검은 월요일과 검은 일주일 이후 6개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률 상승입니다."
 black.7.a:0 "실업률이 높다."
-black.8.t:0 "검은 월요일 이후 6 개월"
-black.8.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.8.t:0 "검은 월요일 이후 6개월"
+black.8.d:0 "검은 월요일과 검은 일주일 이후 6개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률 상승입니다."
 black.8.a:0 "실업이 조금 늘었다."
-black.9.t:0 "검은 월요일 이후 1 년"
-black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
+black.9.t:0 "검은 월요일 이후 1년"
+black.9.d:0 "검은 월요일과 검은 일주일 이후 1년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.9.a:0 "경제가 더욱 악화되었다."
-black.10.t:0 "검은 월요일 이후 1 년"
-black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
+black.10.t:0 "검은 월요일 이후 1년"
+black.10.d:0 "검은 월요일과 검은 일주일 이후 1년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.10.a:0 "경제가 아직 회복되지 않았다 ..."
-black.11.t:0 "검은 월요일 이후 1 년"
-black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
+black.11.t:0 "검은 월요일 이후 1년"
+black.11.d:0 "검은 월요일과 검은 일주일 이후 1년이 지났습니다. 우리 산업은 여전히 타격에서 회복하는 중입니다."
 black.11.a:0 "경제가 조금 회복되었다."
-black.12.t:0 "검은 월요일 이후 2 년"
-black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정화되었으며 실업률은 매일 감소하고 있습니다."
+black.12.t:0 "검은 월요일 이후 2년"
+black.12.d:0 "검은 월요일과 검은 일주일 이후 1년이 지났습니다. 우리 경제는 더 안정화되었으며 실업률은 매일 감소하고 있습니다."
 black.12.a:0 "마침내 경제가 회복되었다!"
-black.13.t:0 "검은 월요일 이후 2 년"
-black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적화되었으며 실업률은 매일 감소하고 있습니다."
+black.13.t:0 "검은 월요일 이후 2년"
+black.13.d:0 "검은 월요일과 검은 일주일 이후 1년이 지났습니다. 우리 경제는 더 안정적화되었으며 실업률은 매일 감소하고 있습니다."
 black.13.a:0 "경제는 여전히 나쁘다 ..."
-black.20.t:0 "전쟁이 경제를 살리고있습니다."
-black.20.d:0 "전쟁으로 인해 여러 분야의 산업 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이것은 검은 월요일 충격의 여파를 줄임으로써 경제에 순 긍정적 효과를 가져왔습니다. 경제가 마침내 되살아날 흔적을 보이고있는 것 같습니다!"
+black.20.t:0 "전쟁이 경제를 살리고 있다."
+black.20.d:0 "전쟁으로 인해 여러 분야의 산업에서 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이는 검은 월요일 위기의 여파를 줄여 경제에 긍정적인 효과를 가져왔습니다. 경제가 되살아날 기미가 마침내 보이는 것 같습니다!"
 black.20.a:0 "멋지군!"
-black.21.t:0 "식민지에서의 재정적 어려움"
-black.21.d:0 "상승하는 인플레이션과 결과적으로 독일의 식민지에 대한 국가 지출은 검은 월요일 이전의 세금으로 유지하기에는 너무 커지게 되었습니다. 일부 독단적인 정치인들은 세금 인상을 제안하지만, 독일 식민지를 돕기 위해 독일 국민들에게 세금을 부과하는 것은 분명히 현재의 경제 상황에서는 지지받지 못할 것입니다. 독일의회의 대부분은 단지 식민지 재산에 대한 제한된 재정 지원을 제안합니다. 우리는 무엇을 해야 할까요?"
+black.21.t:0 "식민지의 재정적 어려움"
+black.21.d:0 "급등하는 인플레이션으로인해 식민지에 대한 독일 정부의 지출은 검은 월요일 이전의 세금으로 유지하기에는 너무 커졌습니다. 일부 독단적인 정치인들은 세금 인상을 제안하지만, 독일 식민지를 돕기 위해 독일 국민들에게 세금을 부과하는 것은 분명히 현재 경제 상황에서는 지지받지 못할 것입니다. 독일 의회의 대부분은 단지 식민지 재산에 대한 제한된 재정 지원을 제안합니다. 우리는 무엇을 해야 할까요?"
 black.21.a:0 "식민지의 요구를 충족시키기 위해 세금을 올려라."
-black.21.b:0 "직접적인 통제하에 있는 식민지들에게만 경제적 지원을 해라."
-black.21.c:0 "더이상의 지출은 안 된다. 그들은 다른 수입원을 찾아야 할 것이다."
+black.21.b:0 "직접적인 통제 하에 있는 식민지들에게만 경제적 지원을 해라."
+black.21.c:0 "더 이상의 지출은 안 된다. 그들은 다른 수입원을 찾아야 할 것이다."
 black.22.t:0 "주요 은행 파산 선언"
-black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니면 개입을 피해야 합니까?"
+black.22.d:0 "오늘, 우리 경제 상태 때문에 주요 은행이 안타깝게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니면 개입을 피해야 합니까?"
 black.22.a:0 "아무 것도 하지 말아라."
-black.22.b:0 "우리의 시민들을 도와주어라!"
+black.22.b:0 "우리 시민들을 도와주어라!"
 black.23.t:0 "주요 산업 회사 파산 선언"
-black.23.d:0 "오늘날 우리 경제의 상태 때문에 주요 산업체는 불행하게도 파산을 선언했습니다. 여러 공장이 전국에서 폐쇄 될 것입니다."
+black.23.d:0 "오늘날 우리 경제 상태 때문에 주요 산업체가 안타깝게도 파산을 선언했습니다. 여러 공장들이 전국에서 폐쇄될 것입니다."
 black.23.a:0 "좋지 않다..."
 black.50.t:0 "제국 경제 정책"
-black.50.d:0 "마침내, 검은 월요일 이후 3 년이 지나면서 우리 경제는 천천히 회복되고 있습니다! 우리의 국가 자산을 더욱 안전하게하기 위해 더 많은 비용을 투자 할 수 있습니다!"
+black.50.d:0 "마침내, 검은 월요일 이후 3년이 지나면서 우리 경제는 천천히 회복되고 있습니다! 우리의 국가 자산을 더욱 안전하게 하기 위해 더 많은 비용을 투자 할 수 있습니다!"
 black.50.a:0 "본국에 투자해라!"
 black.50.b:0 "식민지에 투자해라!"
 black.50.c:0 "우리의 영향권에 투자해라!"
@@ -67,4 +67,4 @@ black.50.e:0 "이웃과 새로운 경제 협력 계획을 발표해라!"
 ### Austria and Black Monday ###
 black.200.t:0 "검은 월요일의 오스트리아 강타"
 black.200.d:0 "검은 월요일은 독일을 강타했으며 충격파가 유럽 전역으로 물결치기까지 오랜 시간이 걸리지 않을 것입니다. 가까운 거리에 있기 때문에 오스트리아는 처음으로 영향을 받았습니다. 경제는 어려움을 겪고 있고 고통의 시기는 앞당겨 있습니다."
-black.200.a:0 "오, !"
+black.200.a:0 "오, 이런!"
