4월업데이트&번역완료

--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+l_english:
+ bukhara_kabul_pact:0 "부하라-카불 조약"
 
 ### Events ###
 afg.0.t:0 "제 5차 영국-아프가니스탄 전쟁"
@@ -42,7 +43,6 @@ afg.7.a:0 "만세!"
 afg.8.t:0 "아프가니스탄 패배의 국내 반응"
 afg.8.d:0 "우리 군대의 패배는 아프가니스탄에 충격을 주었다. 우리의 첩보 기관은 농민과 군대 모두가 정부에 대한 엄청난 불만을 보고하고 있다! 심지어 급진적인 성직자들 조차도 왕가의 개혁 프로그램에 대한 일반적인 반란에 대한 지지를 얻어내고 있다! 이것들은 우리의 작은 왕국에게는 정말 어두운 시대이다."
 afg.8.a:0 "왕은 그가 좋아하는 대로 할 수 있다! 반란을 진압해라!"
-afg.8.b:0 "하비불라 칼라카니가 이슬람 반란의 깃발을 든다!"
 afg.8.c:0 "모하메드 나디르는 아마눌라를 퇴위시키고 자신을 왕으로 선언한다!"
 
 afg.9.t:0 "아프가니스탄의 질서"
@@ -51,22 +51,7 @@ afg.9.a:0 "더 나은 내일을 기대한다."
 
 afg.10.t:0 "혼돈 속의 아프가니스탄!"
 afg.10.d:0 "최선의 노력에도 불구하고, 반군 세력이 카불에서 아마눌라 왕의 군대를 밀어 내고 국가를 장악하였다!"
-afg.10.a:0 "하비불라 칼라카니의 군대는 이슬람의 미덕에 의해 승리했다!"
 afg.10.b:0 "나 장군의 여단은 모든 저항을 물리치고 그를 왕으로 선포한다!"
-
-afg.11.t:0 "아프가니스탄 에미리트의 대외 관계"
-afg.11.d:0 "하비불라 칼라카니는 마침내 아프가니스탄 국민들에게 이슬람 질서를 가져 왔으며, 우리 민족의 확실한 통치자로 자리 잡았다. 인도 정부에 의해 패배 한 후, 폐하께서는 인도인들과의 군사적 충돌을 막기 위해 투르케스탄 이슬람 연맹과 동맹을 맺도록 제의할 것을 제안했다."
-afg.11.a:0 "투르케스탄의 이슬람 연맹과 함께한다!"
-afg.11.b:0 "국가가 폐허 상태에 있는 한 우리는 외교 정책에 관여할 수 없다."
-
-afg.12.t:0 "아프가니스탄의 이슬람 에미리트 연합국과의 동맹 협상"
-afg.12.d:0 "아프가니스탄에서는, 아마눌라의 타락한 군주제가 하비불라 칼라카니가 이끄는 이슬람 반란에 전복되었다. 마지막으로 나라를 완전히 통제하면서 Habibullah는 이슬람 연맹의 힘으로 외국과 국내의 적들이 자신의 가장 의로운 정권을 전복시키지 못하도록 하기 위해 동맹국의 제안으로 우리에게 다가왔습니다."
-afg.12.a:0 "가장 적절한 제안이다! 우리는 받아 들인다!"
-afg.12.b:0 "우리는 강탈자들과 아무 상관 없다!"
-
-afg.13.t:0 "부카라-카불 조약의 성립"
-afg.13.d:0 "오늘날, 아프가니스탄과 투르케스탄의 대표단은 양국 간 동맹의 결속을 강화하기 위해 부카라에서 만났다. 하나님의 백성에게 영광을 돌리라! 알라후 아크바르!"
-afg.13.a:0 "신실한 사람들이 단결할 때 누가 신실한 사람들을 견딜 수 있을까?"
 
 afg.14.t:0 "모하메드 나디르 샤의 왕좌 주장"
 afg.14.d:0 "그렇게 우호적인 방법이 아니고 왕실과의 관계에도 불구하고 왕좌를 차지한, 모하메드 나디르 샤는 그의 정권을 지지하기 위해 합법성을 절실히 필요로 한다. 파슈툰인 지도자들이 폐하의 승천을 지지하기 위해 'loya jirga'(왕의 통치)를 전하는 것이 좋습니다."
