4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Afrika_flavour_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afrika_flavour_l_english.yml
@@ -12,10 +12,11 @@ afro.2.a:0 "찬미하자!"
 afro.3.t:0 "이드 알피트르"
 afro.3.d1:0 "오늘은 이드 알피트르의 첫 번째 날. 모든 무슬림들이 라마단의 끝을 축하하는 자리입니다."
 afro.3.d2:0 "오늘은 이드 알피트르의 첫 번째 날. 터키인들은 라마잔 바이람이라 부르는 이 축제는 모든 무슬림들이 라마단의 끝을 축하하는 자리입니다."
-afro.3.a:0 "축하하자!"
+afro.3.d3:0 "During the reign of Mohammad Ali, he demanded that the whole of Egypt know when Ramadan ends. To do this he positioned a cannon to fire at the crack of dawn on the first day of Eid. Today cannons can be heard throughout Egypt from the cities to the country side as people prepare to celebrate the end of Ramadan."
+afro.3.a:0 "이 날을 축하하자!"
 
-afro.4.t:0 "선대 술탄 아흐메드 푸아드 훙"
-afro.4.d:0 "아프메드 푸아드는 1917년에서 1925년 제위에 올랐던 이집트의 술탄입니다. 영국에 의해 즉위했으나 독일-오스만 갑선에 의해 케디베 압바스 2세가 왕위에 오르며 폐위되었습니다. 그는 망명객의 신분으로 스위스에서 머물다 향년 68세의 나이로 사망했습니다. 16세의 아들 파루크는 이집트 왕위를 청구했고 이에 성공했다고 합니다."
+afro.4.t:0 "술탄 아흐메드 푸아드 서거"
+afro.4.d:0 "The Sultan of Egypt Ahmed Fuad, sultan of Egypt and Sudan since 1925 has passed away today. Imposed by the British and oversaw the Egyptian revolution of 1925. He died in Cairo today at 65. His 16 year old son Farouk now ascends the throne as Sultan of Egypt and Sudan."
 afro.4.a:0 "애송이를 두려워 할 이유는 없다"
 
 afro.5.t:0 "외메르 파루크의 왕세자비 사망!"
