4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -8,7 +8,6 @@ TEX_military:0 "우리의 육군을 만들자"
 TEX_military_desc:0 "우리에게 다가온 내전으로 인해 우리는 미국을 진정한 영광과 위대함으로 이끌 수 있는 새로운 육군을 창설할 필요가 있습니다."
 TEX_army:0 "헌신적인 미 육군"
 TEX_army_desc:0 "우리에게 다가온 내전에서 우리는 헌신적인 육군이 필요합니다. 우리 육군은 배부른 자본가나 무정부주의자가 아닌 '미국인'이 된다는 것의 진정한 가치를 따를 것입니다."
-TEX_pattons_mobility_plan:0 "패튼의 기동전"
 TEX_pattons_mobility_plan_desc:0 "육군을 위한 다양한 계획들 중에서, 패튼 장군의 기동전 계획을 지원합시다. 이것은 기갑 및 기계화 보병 전력에 주력하는 계획입니다."
 TEX_motorized_effort:0 "차량화 개발"
 TEX_motorized_effort_desc:0 "패튼의 계획의 핵심적인 부분은 기계화 차량들입니다. 헨리 포드로 대표되는, '정통 미국'에 충성하는 자동차 제조사의 리더들과 긴밀하게 협력함으로써, 우리는 승리에 필요한 차량들을 생산할 수 있습니다."
@@ -54,7 +53,7 @@ TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not
 
 ### Focuses - Air Force ###
 TEX_airforce:0 "헌신적인 미 공군"
-TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to the Long and the true America."
+TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to [Root.GetLeader] and the true America."
 TEX_air_support:0 "레이미의 항공 지원"
 TEX_air_support_desc:0 "Howard Knox Ramey believes that the best use for the Air Force is to work with the Army. By having the army and the air force work together, victory will be ours."
 TEX_cas_effort:0 "근접 항공 지원"
@@ -355,7 +354,7 @@ unionstate.2.d:0 "With the end of the Civil War, we should decide where our capi
 unionstate.2.a:0 "Washington is a corrupt city."
 unionstate.2.b:0 "Washington has been cleansed of the Corruption."
 unionstate.3.t:0 "Rebirth of the Country"
-unionstate.3.d:0 "After the devastation of the American Civil War, Long and the America First Party were hoping to rebuild America stronger than before. The Syndicalist threat was still present around the world and a strong America was needed to meet that threat. Due to the war there was a significant labour shortage and tough decisions would be needed to get the country back on its feet."
+unionstate.3.d:0 "After the devastation of the American Civil War, [Root.GetLeader] and the America First Party were hoping to rebuild America stronger than before. The Syndicalist threat was still present around the world and a strong America was needed to meet that threat. Due to the war there was a significant labour shortage and tough decisions would be needed to get the country back on its feet."
 unionstate.3.a:0 "Conscript the labour required"
 unionstate.3.b:0 "The corporations can handle this"
 
@@ -367,7 +366,7 @@ unionstate.571.b:0 "We don't feel comfortable about this..."
 unionstate.6.t:0 "CSA가 프랑스로 탈출"
 unionstate.6.d:0 "Reed and the CSA leadership were forced to flee to the Commune of France to escape the wrath of the victorious American Union State."
 unionstate.6.a:0 "다시는 돌아오지마라"
-unionstate.7.t:0 "롱과 PSA의 리더십"
+unionstate.7.t:0 "[Root.GetLeader]과 PSA의 리더십"
 unionstate.7.d:0 "After the end of the civil war, the question of the PSA leadership was put before Long. The insolence of the PSA leadership needed to be punished but it could alienate the west coast and cause further problems. If the PSA leadership was removed, the industry of the west coast would be available but the expertise of the pacific industries would be diminished."
 unionstate.7.a:0 "Hang them all"
 unionstate.7.b:0 "Amnesty it is"
@@ -426,7 +425,7 @@ unionstate.38.d:0 "With the fall of Berlin serious questions about the American 
 unionstate.38.a:0 "We should remain neutral"
 unionstate.38.b:0 "We need to send support!"
 unionstate.38.c:0 "War!"
-unionstate.38.e:0 "Join Mitteleuropa!"
+unionstate.38.e:0 "Join the Reichspakt!"
 unionstate.39.t:0 "The Issue of New England"
 unionstate.39.d:0 "The independence of the state of New England had been a contentious issue for the government of the AUS. The reintegration of the state back into the American Union had been made the highest priority and it was unlikely that the government would be deterred by a possible war with the Entente. The stakes were high for the American Union State."
 unionstate.39.a:0 "Demand their return"
@@ -542,19 +541,19 @@ unionstate.131.a:0 "Lindbergh wins"
 unionstate.131.b:0 "Smith wins with Father Caughlin's support"
 unionstate.131.c:0 "Father Caughlin wins "
 
-unionstate.200.t:0 "America wishes to join Mitteleuropa"
+unionstate.200.t:0 "America wishes to join the Reichspakt"
 unionstate.200.d:0 "The American union State has sent us a request to join Mitteleuropa. The industrial might of America would be a great boon to the German Empire, and the Americans have promised to help us do everything they can to destroy syndicalism throughout America. It does help that there many German-Americans in the American Union State government. This alliance would help strengthen the ties between America and Germany, though some wonder if we should ally with such a regime in America."
 unionstate.200.a:0 "America can Join"
 unionstate.200.b:0 "We do not need the Americans"
-unionstate.201.t:0 "America in Mitteleuropa"
-unionstate.201.d:0 "The Germans have brought us into Mitteleuropa. Now together with the Germans we stand together against Syndicalism."
+unionstate.201.t:0 "America in the Reichspakt"
+unionstate.201.d:0 "The Germans have brought us into the Reichspakt. Now together with the Germans we stand together against Syndicalism."
 unionstate.201.a:0 "Great!"
 unionstate.202.t:0 "Canada Holds Alaska"
-unionstate.202.d:0 "After the American Union had triumphed in the American Civil War they looked to reclaim the territories that were lost to non-Americans. The Canadians had seized Alaska at the beginning of the war and there was some concern that they did not plan to return it. Long and the leaders of the American Union were considering war with the Entente to reclaim Alaska."
+unionstate.202.d:0 "After the American Union had triumphed in the American Civil War they looked to reclaim the territories that were lost to non-Americans. The Canadians had seized Alaska at the beginning of the war and there was some concern that they did not plan to return it. [Root.GetLeader] and the leaders of the American Union were considering war with the Entente to reclaim Alaska."
 unionstate.202.a:0 "Demand the Canadians hand over Alaska"
 unionstate.202.b:0 "Allow the Canadians to control Alaska"
 unionstate.203.t:0 "American Union State Demands Alaska Back"
-unionstate.203.d:0 "With the end of the American Civil War and the victory of the AUS, Long and the American Union have requested that Canada relinquishes control of Alaska to them."
+unionstate.203.d:0 "With the end of the American Civil War and the victory of the AUS, [Root.GetLeader] and the American Union have requested that Canada relinquishes control of Alaska to them."
 unionstate.203.a:0 "It is ours now."
 unionstate.203.b:0 "Accept their claims"
 unionstate.204.t:0 "Canada Gains Control of Alaska."
