4월 업데이트&번역완료

--- a/Kaiserreich Korean Translation/localisation/KR_Armenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Armenia_l_english.yml
@@ -1,9 +1,9 @@
-﻿l_english:
+l_english:
 
 ###Parties###
-ARM_paternal_autocrat_party:0 "괴뢰정부"
-ARM_national_populist_party:0 "아르메니아 국민 정부"
-ARM_paternal_autocrat_party_long:0 "괴뢰정부"
+ARM_paternal_autocrat_party:0 "다쉬낙스"
+ARM_paternal_autocrat_party_long:0 "다쉬나크트수튠"
+ARM_national_populist_party:0 "NAG"
 ARM_national_populist_party_long:0 "아르메니아 국민 정부"
 
 ###Events###
