--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -25,76 +25,76 @@ AST_national_populist_banned_party:0 "Australasian Guard"
 AST_national_populist_banned_party_long:0 "Australasian Guard"
 
 ### Tooltips ###
-controls_all_states:0 "All owned states are currently also controlled"
-AST_had_1936_election:0 "Has held 1936 election"
-AST_had_1939_election:0 "Has held 1939 election"
-AST_is_republic:0 "Australasia has become a republic"
-AST_becomes_republic:0 "Australasia will become a republic, with a new flag"
-AST_trade_deal:0 "Bilateral Trade Deal"
-AST_trade_deal_refused:0 "Trade Deal Refused"
-AST_trade_with_commonwealth:0 "New trade deals will be sought with other Entente countries"
-AST_trade_world:0 "New trade deals will be sought with non-Entente countries"
-CAN_isac_created:0 "§YDominion of Canada§! has formed the ISAC"
-AST_is_upgrading_reserve:0 "The mothballed part of the fleet will be brought back into service, a process which could take six months or more"
-AST_not_upgrading_reserve:0 "The mothballed part of the fleet will be abandoned and scrapped"
-AST_upgrade_1:0 "Submarines and destroyers will be brought back into service"
-AST_upgrade_2:0 "Light and heavy cruisers will be brought back into service"
-AST_upgrade_3:0 "Battleships and battle cruisers will be brought back into service"
-AST_plebiscite_failed:0 "the conscription plebiscite has failed"
-AST_not_has_elected:0 "does not have an elected government"
-AST_war_with_major:0 "is at war with a major power"
-AST_claimed_territory:0 "Claimed our territory"
-AST_add_paramilitary_units:0 "Three new militia units will appear in Canberra"
-cannot_have_conscription:0 "Cannot enact conscription laws"
-AST_distanced_from:0 "Distanced"
-AST_close_allies:0 "Close Allies"
-ITA_likes_govt:0 "Likes Government"
-ITA_dislikes_govt:0 "Dislikes Government"
-ITA_hates_govt:0 "Hates Government"
-ITA_outraged:0 "Outraged"
-AST_six_months_reform:0 "Army reforms will take approximately six months, at which point the malus will be removed and replaced with a bonus"
-AST_had_first_congress:0 "Has held first ACTU congress"
-AST_congress_held:0 "ACTU Congress Held"
-AST_war_if_coup_fails:0 "If the coup fails, we may end up at war with §Y[AST.GetName]§!"
-AST_nzl_will_rebel:0 "New Zealand will soon rebel from §Y[AST.GetName]§!, supported by the Australasian Guard"
-AST_ships_defect_to_nzl:0 "Several of our ships have defected to §Y[NZL.GetName]§!"
-AST_no_elections:0 "All future elections will be suspended"
-AST_receive_volunteers:0 "Volunteer units appear in Bombay"
-AST_nzl_referendum:0 "New Zealand state will hold a referendum on whether or not to secede from §Y[AST.GetName]§!"
+controls_all_states:0 "모든 보유 주는 현재 통제 하에 있음"
+AST_had_1936_election:0 "1936년 선거를 치룸"
+AST_had_1939_election:0 "1939년 선거를 치룸"
+AST_is_republic:0 "오스트랄라시아가 공화국이 되었다"
+AST_becomes_republic:0 "오스트랄라시아는 새로운 국기와 함께, 공화국이 될 것이다"
+AST_trade_deal:0 "양자 간 무역 협정"
+AST_trade_deal_refused:0 "무역 협정이 거부되다"
+AST_trade_with_commonwealth:0 "새로운 무역 협정은 다른 협상국 소속국과 이루어질 것이다"
+AST_trade_world:0 "새로운 무역 협정은 비-협상국 소속국과 이루어질 것이다"
+CAN_isac_created:0 "§Y캐나다 자치령§!이 ISAC을 구성하다"
+AST_is_upgrading_reserve:0 "모스볼 처리된 함대는 다시 현역에 복귀할 것이며, 이를 위해 6개월 혹은 그 이상의 시간이 들 것이다"
+AST_not_upgrading_reserve:0 "모스볼 처리된 함대는 버려지고 고철 처리될 것이다"
+AST_upgrade_1:0 "잠수함과 구축함은 현역에 복귀 할 것이다"
+AST_upgrade_2:0 "경순양함과 중순양함은 현역에 복귀 할 것이다"
+AST_upgrade_3:0 "전함과 순양전함은 현역에 복귀 할 것이다"
+AST_plebiscite_failed:0 "징병에 대한 국민 투표를 실패하다"
+AST_not_has_elected:0 "선출 정부를 가지고 있지 않다"
+AST_war_with_major:0 "주요 강국과 전쟁 중이다"
+AST_claimed_territory:0 "우리의 영토를 요구하다"
+AST_add_paramilitary_units:0 "세 민병대 부대가 캔버라에서 나타날 것이다"
+cannot_have_conscription:0 "징병 법들을 통과시킬 수 없다"
+AST_distanced_from:0 "멀리 떨어진"
+AST_close_allies:0 "가까운 동맹들"
+ITA_likes_govt:0 "정부에 호의적임"
+ITA_dislikes_govt:0 "정부에 적대적임"
+ITA_hates_govt:0 "정부를 증오함"
+ITA_outraged:0 "격분함"
+AST_six_months_reform:0 "육군 개혁은 약 6개월이 걸릴 것이며, 그 시점에서 감소치는 보너스로 대체 될 것이다"
+AST_had_first_congress:0 "첫 ACTU 회의가 열리다"
+AST_congress_held:0 "ACTU 회의가 열리다"
+AST_war_if_coup_fails:0 "쿠데타가 실패할 경우, §Y[AST.GetName]§!과의 전쟁을 맞닥뜨릴 것이다!"
+AST_nzl_will_rebel:0 "뉴질랜드는 곧 Australasian Guard의 도움을 받아 §Y[AST.GetName]§! 에게 반기를 들 것이다!"
+AST_ships_defect_to_nzl:0 우리의 함선 몇몇이 §Y[NZL.GetName]§! 로 도망쳤다"
+AST_no_elections:0 "모든 향후 선거는 연기될 것이다"
+AST_receive_volunteers:0 "봄베이에 자원병 부대가 등장한다"
+AST_nzl_referendum:0 "뉴질랜드는 §Y[AST.GetName]§! 에 합류할 것인지 아닌 지에 대한 국민 투표를 진행할 것이다"
 
 ### Ideas ###
-AST_oversized_fleet:0 "Oversized Fleet"
-AST_oversized_fleet_desc:0 "In the chaotic aftermath of Britain’s downfall, many ships fled to Australasia to find refuge. This arrangement has become permanent, and with the economy now in a depression affording it has become difficult. A solution must be found soon."
-AST_upgrading_reserve:0 "Upgrading Naval Reserve"
-AST_depression_1:0 "Economic Depression"
-AST_depression_1_desc:0 "Australasia’s economy was never particularly strong, and the aftermath of the Weltkrieg has only made it much, much worse. Opportunity is not present, and people cannot find jobs. Radicalization is beginning to take root across the country as more extreme solutions begin to be considered."
-AST_depression_2:0 "Recovering From Depression"
-AST_depression_2_desc:0 "Australasia’s economy was never particularly strong, and the aftermath of the Weltkrieg has only made it much, much worse. Opportunity is not present, and people cannot find jobs. Radicalization is beginning to take root across the country as more extreme solutions begin to be considered."
-AST_bled_dry:0 "Bled Dry"
-AST_bled_dry_desc:0 "We gave everything we had in the Weltkrieg and then some, and it shows. Nearly everybody knew someone who died far from home for a war that meant nothing in the end, and have no desire to see such a thing happen again, not unless it is absolutely necessary."
-AST_anzac_spirit_1:0 "ANZAC Spirit"
-AST_anzac_spirit_1_desc:0 "During the Weltkrieg, the Australian and New Zealanders were the most aggressive, and managed to keep their form in spite of their questionable discipline. Out of the line they were undoubtedly difficult to handle, but once in it they loved a fight. They were a curious mixture of toughness and sentimentality."
-AST_anzac_spirit_2:0 "ANZAC Spirit"
-AST_anzac_spirit_2_desc:0 "During the Weltkrieg, the Australian and New Zealanders were the most aggressive, and managed to keep their form in spite of their questionable discipline. Out of the line they were undoubtedly difficult to handle, but once in it they loved a fight. They were a curious mixture of toughness and sentimentality."
-AST_anzac_spirit_3:0 "ANZAC Spirit"
-AST_anzac_spirit_3_desc:0 "During the Weltkrieg, the Australian and New Zealanders were the most aggressive, and managed to keep their form in spite of their questionable discipline. Out of the line they were undoubtedly difficult to handle, but once in it they loved a fight. They were a curious mixture of toughness and sentimentality."
-AST_anzac_spirit_4:0 "ANZAC Spirit"
-AST_anzac_spirit_4_desc:0 "During the Weltkrieg, the Australian and New Zealanders were the most aggressive, and managed to keep their form in spite of their questionable discipline. Out of the line they were undoubtedly difficult to handle, but once in it they loved a fight. They were a curious mixture of toughness and sentimentality."
-AST_anzac_spirit_5:0 "ANZAC Spirit"
-AST_anzac_spirit_5_desc:0 "During the Weltkrieg, the Australian and New Zealanders were the most aggressive, and managed to keep their form in spite of their questionable discipline. Out of the line they were undoubtedly difficult to handle, but once in it they loved a fight. They were a curious mixture of toughness and sentimentality."
-AST_new_unrest:0 "New Unrest"
-AST_maori_no_rights:0 "No Maori Act"
-AST_maori_rights:0 "Maori Act Passed"
-AST_british_advisors_idea:0 "British Advisers"
-AST_uob_advisors_idea:0 "British Advisers"
-AST_liberal_economy:0 "Economy Liberalized"
-AST_privatization_effort:0 "Privatization Efforts"
-AST_government_reformed:0 "Government Reforms"
-AST_research_council_1:0 "Australasian Research Council"
-AST_research_council_2:0 "Australasian Research Council"
-AST_research_council_3:0 "National University"
-AST_pacific_navy_idea:0 "Pacific Navy Focus"
-AST_defensive_navy_idea:0 "Defensive Navy Focus"
+AST_oversized_fleet:0 "비대한 함대"
+AST_oversized_fleet_desc:0 "영국의 몰락의 혼란스러운 여파로, 많은 배가 피난처를 찾기 위해 호주로 도망 쳤다. 이러한 조치는 영구적인 것이 되었으며, 현재의 경제 상황으로는 상황을 개선하기가 어렵다. 해결책을 곧 찾아내야 한다."
+AST_upgrading_reserve:0 "해군 예비함을 개선하다"
+AST_depression_1:0 "경제 불황"
+AST_depression_1_desc:0 "오스트랄라시아의 경제는 결코 튼튼하다 할 수 없었으며, 대전의 여파는 경제를 훨씬 더 악화시켰을 뿐이다. 기회는 존재하지 않았고, 사람들은 직업을 찾을 수 없었다. 보다 극단적인 해결책이 고려되기 시작함에 따라 극단주의자들이 전국에 뿌리를 내리기 시작했다."
+AST_depression_2:0 "불황에서 회복하다"
+AST_depression_2_desc:0 "오스트랄라시아의 경제는 결코 튼튼하다 할 수 없었으며, 대전의 여파는 경제를 훨씬 더 악화시켰을 뿐이다. 기회는 존재하지 않았고, 사람들은 직업을 찾을 수 없었다. 보다 극단적인 해결책이 고려되기 시작함에 따라 극단주의자들이 전국에 뿌리를 내리기 시작했다."
+AST_bled_dry:0 "너무도 많은 피를 흘리다"
+AST_bled_dry_desc:0 우리는 대전기에 모든 것을 쏟아 부었고, 결판이 났다. 거의 모든 사람들이 결국엔 아무 의미 없이 고향에서 멀리 떨어진 곳에서 죽어나간 사람이 있다는 것을 알고 있고, 그것이 절대적으로 필요하지 않는 한 그런 일이 일어나는 것을 다시는 보고 싶어 하지 않는다."
+AST_anzac_spirit_1:0 "ANZAC의 정신"
+AST_anzac_spirit_1_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼다. 그들은 강인함과 감정적임의 흥미로운 조화였다."
+AST_anzac_spirit_2:0 "ANZAC의 정신"
+AST_anzac_spirit_2_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼다. 그들은 강인함과 감정적임의 흥미로운 조화였다."
+AST_anzac_spirit_3:0 "ANZAC의 정신"
+AST_anzac_spirit_3_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼다. 그들은 강인함과 감정적임의 흥미로운 조화였다."
+AST_anzac_spirit_4:0 "ANZAC의 정신"
+AST_anzac_spirit_4_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼다. 그들은 강인함과 감정적임의 흥미로운 조화였다."
+AST_anzac_spirit_5:0 "ANZAC의 정신"
+AST_anzac_spirit_5_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼다. 그들은 강인함과 감정적임의 흥미로운 조화였다."
+AST_new_unrest:0 "새로운 불안"
+AST_maori_no_rights:0 "마오리 법안은 없다"
+AST_maori_rights:0 "마오리 법안이 통과되다"
+AST_british_advisors_idea:0 "영국인 조언가들"
+AST_uob_advisors_idea:0 "영국인 조언가들"
+AST_liberal_economy:0 "경제 자유화"
+AST_privatization_effort:0 "민영화 노력"
+AST_government_reformed:0 "정부 개혁"
+AST_research_council_1:0 "오스트랄라시아 연구 위원회"
+AST_research_council_2:0 "오스트랄라시아 연구 위원회"
+AST_research_council_3:0 "국립 대학"
+AST_pacific_navy_idea:0 "태평양 해군 교리"
+AST_defensive_navy_idea:0 "방어적 해군 "
 AST_shipbuilding_board_idea:0 "Australsian Shipbuilding Board"
 AST_aviation_industry_1:0 "Aviation Industry"
 AST_aviation_industry_2:0 "Aviation Industry"
