--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -90,63 +90,63 @@ AST_uob_advisors_idea:0 "영국인 조언가들"
 AST_liberal_economy:0 "경제 자유화"
 AST_privatization_effort:0 "민영화 노력"
 AST_government_reformed:0 "정부 개혁"
-AST_research_council_1:0 "오스트랄라시아 연구 위원회"
-AST_research_council_2:0 "오스트랄라시아 연구 위원회"
+AST_research_council_1:0 "오스트랄라시아 연구 협의회"
+AST_research_council_2:0 "오스트랄라시아 연구 협의회"
 AST_research_council_3:0 "국립 대학"
 AST_pacific_navy_idea:0 "태평양 해군 교리"
 AST_defensive_navy_idea:0 "방어적 해군 "
-AST_shipbuilding_board_idea:0 "Australsian Shipbuilding Board"
-AST_aviation_industry_1:0 "Aviation Industry"
-AST_aviation_industry_2:0 "Aviation Industry"
-AST_war_effort_idea:0 "The War Effort"
-AST_new_anzac_idea:0 "The New ANZAC"
-AST_path_of_defense:0 "Path of Defence"
-AST_anderson_doctrine_idea:0 "Anderson Doctrine"
-AST_new_guard_military_1:0 "Australasian Guard Officers"
-AST_new_guard_military_2:0 "Rouse the Masses"
-AST_new_guard_economy_1:0 "Laissez Faire Reforms"
-AST_new_guard_economy_2:0 "The New Plan"
-AST_rising_power:0 "Rising Power"
-AST_army_purged:0 "Army Purged"
-AST_army_loyal:0 "Army Loyal"
+AST_shipbuilding_board_idea:0 "오스트랄라시아 조선 위원회"
+AST_aviation_industry_1:0 "항공 산업"
+AST_aviation_industry_2:0 "항공 산업"
+AST_war_effort_idea:0 "전쟁 기여"
+AST_new_anzac_idea:0 "새로운 ANZAC"
+AST_path_of_defense:0 "수호의 방식"
+AST_anderson_doctrine_idea:0 "앤더슨 독트린"
+AST_new_guard_military_1:0 "오스트랄라시아 근위 장교단"
+AST_new_guard_military_2:0 "대중에 호소하다"
+AST_new_guard_economy_1:0 "자유 방임 개혁"
+AST_new_guard_economy_2:0 "새로운 계획"
+AST_rising_power:0 "떠오르는 강국"
+AST_army_purged:0 "군을 숙청하다"
+AST_army_loyal:0 "군이 충성하다"
 AST_ASRC_idea:0 "ASRC"
-AST_totalist_economy_idea:0 "State-Controlled Economy"
-AST_social_reforms_1:0 "Social Reforms"
-AST_social_reforms_2:0 "Social Reforms"
-AST_army_fortress:0 "Fortress Australasia"
-AST_AFM_economy_1:0 "State-Controlled Economy"
-AST_AFM_economy_2:0 "State-Controlled Economy"
-AST_war_timer:0 "Entente War Timer"
+AST_totalist_economy_idea:0 "국가 주도 경제"
+AST_social_reforms_1:0 "사회 개혁"
+AST_social_reforms_2:0 "사회 개혁"
+AST_army_fortress:0 "오스트랄라시아 요새"
+AST_AFM_economy_1:0 "국가 주도 경제"
+AST_AFM_economy_2:0 "국가 주도 경제"
+AST_war_timer:0 "협상국의 전쟁 기록계"
 
 ### Focuses ###
-AST_democracy_prevails:0 "A Democratic Australasia"
-AST_democracy_prevails_desc:0 "Democracy prevails in Australasia and, for the moment, power remains in the hands of parliament and thus the people. The challenges facing the nation are many, however, and freedom could all too easily slip from our hands if we are not careful."
-AST_freedom_of_the_press:0 "Freedom of the Press"
-AST_freedom_of_the_press_desc:0 "To better maintain its grip on the population, Birdwood's regime introduced censorship laws in 1926. Rescinding those laws is all but expected, now that the nation is once again democratic... though it has been a long time since Australasian newspapers have felt free to speak their mind. Hopefully they will remember who loosened their chains."
-AST_trade_union_question:0 "Question of the Unions"
-AST_trade_union_question_desc:0 "In the aftermath of the Melbourne Commune, trade unions were made illegal. While many are skeptical of their ideology, the continued draconian enforcement of Birdwood's policies is decidedly unpopular, and thus we must decide whether the unions have a place in modern Australasian society."
-AST_lift_martial_law:0 "Lift Martial Law"
-AST_lift_martial_law_desc:0 "Since the nation's formation, Australasia has in effect been under martial law. Now with democracy restored and power in the hands of Parliament, the government is in a position to restore civil liberties in Australasia."
-AST_suppress_syndicalism:0 "Suppress the Syndicalists"
-AST_suppress_syndicalism_desc:0 "The decision is clear: syndicalism is the greatest threat facing the nation, and thus the Australasian Council of Trade Unions must be suppressed with all force. Since the unions have fallen under the sway of these radicals, there can be no compromise."
-AST_workers_deal:0 "Compromise With Labour"
-AST_workers_deal_desc:0 "The time has come to recognise that Australasia's labour troubles are larger than the syndicalist radicals who try to stir up trouble. There are union leaders with whom we can negotiate, and in time it may be possible to work out a solution that makes for a fairer society as well as cuts the legs out from under the radicals."
-AST_call_for_unity:0 "Call For Unity"
-AST_call_for_unity_desc:0 "With the 1939 elections done and democracy having proven itself to be an enduring force in Australasia, the time has come to call on the people of Australasia to pull together and put past conflicts behind them. We must move forward as a nation, a single force that marches bravely into the new world."
-AST_labour_resolved:0 "The Labour Threat is Over"
-AST_labour_resolved_desc:0 "We have endured more than our fair share of labour conflict in the 20th Century, and the time has come to put that chapter of our history to a close."
-AST_maori_act:0 "The Maori Act"
-AST_maori_act_desc:0 "Much of the land owned by Maori in New Zealand is economically unproductive. Many are suggesting we turn these barren locations into fruitful sites of industry and commerce. The people of New Zealand are largely opposed to these proposals, however, and want Maori rights to these lands be guaranteed by law. A decision must soon be made as to which we consider more important."
-AST_long_live_the_king:0 "Long Live the King!"
-AST_long_live_the_king_desc:0 "The time has come to re-dedicate ourselves to the British Commonwealth and our place within it. While there are those who might suggest turning our backs on the crown, we say that we are now and shall always be a loyal subject of the King. Long live the Confederation!"
-AST_increase_british_ties:0 "Increase British Ties"
-AST_increase_british_ties_desc:0 "While we are no longer in need of direct rule by the British, we would be fools not to realise our future depends heavily on their aid. Let us ask for advisers to help forward our military research efforts, so that we may be a better part of the Entente alliance."
-AST_australasian_republic:0 "Become a Republic"
-AST_australasian_republic_desc:0 "It is true that we began as a colony of the British, and we will forever owe our origins to the Motherland. We cannot, however, ignore the heavy hand which the British have employed in our nation... and neither can our people. The time has come to respectfully disengage our political system from the trappings of parliamentary rule and become a republic in full."
-AST_new_constitution:0 "A New Constitution"
-AST_new_constitution_desc:0 "Becoming a republic has meant the raising of many questions regarding procedure and the rights of the individual citizen. The Australasian constitution will need to be re-written, and we can take this opportunity to forge the kind of government which will take us into the next century and beyond."
-AST_we_march_forward:0 "We March Forward"
-AST_we_march_forward_desc:0 "Let us celebrate our status as a free and just society, an Australasia that exists for all its citizens and which leaves none of them behind."
+AST_democracy_prevails:0 "민주 오스트랄라시아"
+AST_democracy_prevails_desc:0 "민주주의는 오스트랄라시아에 만연하고, 이 순간, 권력은 의회의 손 안에 남아 있으며 이는 국민들이 권력을 가지고 있음을 뜻합니다. 국가가 마주친 어려움은 많지만, 자유는 우리가 조심하지 않으면 너무나도 쉽게 우리의 손을 빠져 나갑니다."
+AST_freedom_of_the_press:0 "언론의 자유"
+AST_freedom_of_the_press_desc:0 "국민들의 통제를 수월하게 하기 위해, 버드우드의 정권은 1926년에 검열 법을 시행했다. 이 법을 폐지하는 것은 거의 예상 되었는데, 이 나라가 다시 한번 민주화되었기 때문이다… 비록 오스트랄라시아의 신문이 자유롭게 말할 수 있음을 느끼기까지 오랜 시간이 걸리긴 했지만.  그들이 누가 그들을 얶메는 것을 풀어 주었는지 기억하기를 빌자."
+AST_trade_union_question:0 "노동 조합의 거취에 대해"
+AST_trade_union_question_desc:0 "멜버른 코뮨의 후유증으로, 노동 조합은 불법이 되었다. 그들의 사상에 대한 많은 회의적 시각이 있지만, 지속된 버드우드의 압제적인 정책 시행은 확실히 인기가 없으며, 그러므로 우리는 노동 조합이 현대 오스트랄라시아 사회에서 가질 위치에 대해 결정해야 한다."
+AST_lift_martial_law:0 "계엄령을 해제하다"
+AST_lift_martial_law_desc:0 "국가가 성립되었을 때부터, 오스트랄라시아는 실질적인 계엄령 상태 하에 있었다. 이제 민주주의가 부활했고 의회가 권력을 가지고 있으니, 정부는 오스트랄라시아에 민간 자유를 부활시킬 수 있는 위치에 있다."
+AST_suppress_syndicalism:0 "생디칼리스트들을 억압하다"
+AST_suppress_syndicalism_desc:0 "결정은 확고하다:생디칼리즘은 국가가 마주한 가장 큰 위협이고, 그러므로 오스트랄라시아 노동 조합 의회는 총력을 다해 억압해야 한다. 노조가 이런 급진 세력의 손에 넘어간 이상 타협은 있을 수 없다."
+AST_workers_deal:0 "노동자들과의 타협"
+AST_workers_deal_desc:0 "오스트랄라시아의 노동 문제가 문제를 일으키려고 하는 급진적인 상징 주의자들보다 더 크다는 것을 인식할 때가 되었다. 우리가 협상할 수 있는 노조 지도자들이 있으며, 시간이 지나면서 좀 더 공정한 사회를 만들고 급진 주의자들의 세력을 약화시키는 해결책을 강구하는 것이 가능하다."
+AST_call_for_unity:0 "통합을 촉구하다"
+AST_call_for_unity_desc:0 "1939년 선거가 끝나고 오스트랄라시아에서 민주주의가 영속적인 세력이라는 것이 입증됨에 따라, 오스트랄라시아 국민들은 단결하여 충돌을 피할 수 있도록 촉구할 때가 되었다. 우리는 하나 된 국가로, 새로운 세계에 용감하게 행진해야 한다."
+AST_labour_resolved:0 "노동자들의 위협이 종결되다"
+AST_labour_resolved_desc:0 "우리는 20세기에 적정 선을 넘어선 노동 분규를 참아 왔고, 이제 우리 역사의 그 한 장을 끝낼 때가 왔다."
+AST_maori_act:0 "마오리 법안"
+AST_maori_act_desc:0 "뉴질랜드의 마오리족이 소유한 땅의 대부분은 경제적으로 비효율적이다. 다수가 이 불모지를 산업과 상업이 발달된 곳으로 바꾸자고 제안하고 있다. 하지만, 뉴질랜드 사람들은 이러한 제안에 크게 반대하고, 이 땅에 대한 마오리족의 권리가 법으로 보장되기를 원한다. 우리가 어느 것을 더 중요하게 생각하는지에 대해서 곧 결정해야 한다."
+AST_long_live_the_king:0 "국왕 폐하 만세!"
+AST_long_live_the_king_desc:0 "영국의 영연방과 그에 속한 우리의 위치를 재정립 해야 할 때가 왔다. 몇몇 사람들은 우리가 왕관에 등을 돌려야 한다고 주장하지만, 우리는 지금, 그리고 항상 왕의 충실한 신하라고 말한다. 연방 만세!"
+AST_increase_british_ties:0 "영국계와의 관계를 강화하다"
+AST_increase_british_ties_desc:0 우리는 더 이상 영국의 직접적인 통치가 필요하지 않지만, 우리의 미래가 영국의 원조에 크게 의존하고 있다는 것을 깨닫지 못하는 것은 어리석은 행동이 될 것이다. 우리는 조언자들이 우리의 군사 연구를 진척시켜 우리가 영국의 동맹에 더 나은 한 부분이 될 수 있도록 도와 줄 것을 요구해야 한다."
+AST_australasian_republic:0 "공화국이 되다"
+AST_australasian_republic_desc:0 "우리가 영국의 식민지로 시작한 것은 사실이며, 우리는 영원히 우리의 모국에서부터 의 기원을 잊어서는 안된다. 하지만, 우리는 영국인들이 우리 나라에서 행한 강압적인 태도를 무시할 수는 없으며… 우리 쪽 사람들도 마찬가지이다.  우리의 정치 제도를 의회 통치의 구조에서 점잖게 빠져 나와 진정한 공화국이 될 때가 왔다."
+AST_new_constitution:0 "새로운 헌법"
+AST_new_constitution_desc:0 "공화국이 되는 것은 절차와 개인 시민의 권리에 관한 많은 질문을 제기하는 것을 의미한다. 오스트랄라시아의 의 헌법은 다시 쓰여질 필요가 있을 것이며, 우리는 이 기회를 통해 우리가 다음 세기와 그 이후까지 이끌 수 있는 정부를 만들 수 있다."
+AST_we_march_forward:0 "우리는 앞으로 나아간다"
+AST_we_march_forward_desc:0 "자유로운 정의로운 사회인 오스트랄라시아의 모든 시민들을 위해 존재하며, 그들 중 어느 누구도 차별 받지 않는 독립국으로 서의 우리의 위상을 경축하자."
 
 AST_syndicalist_victory:0 "Victory for the Syndicalists"
 AST_syndicalist_victory_desc:0 "We have had to wrest victory from the hands of the capitalists, no longer will Australasians be expected to risk their lives to make this country a paradise for a few hundred, or a few thousand greedy, selfish millionaire families! Now the revolution has come to Australasia and we will not let our chance go to waste!"
