--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -23,65 +23,65 @@ afg.3.d:0 "저주스러운! 아프간 개들은 우리를 완전히 압도하고
 afg.3.a:0 "우리는 다른 선택이 없기 때문에 항복한다..."
 afg.3.b:0 "그들은 분명 농담하고 있다, 힌두스탄 만세!"
 
-afg.4.t:0 "델리 정부가 거부했다!"
-afg.4.d:0 "어리석게도, 영국의 애완견들은 우리의 정당한 주장을 거부했다."
+afg.4.t:0 "델리 정부가 거부하다!"
+afg.4.d:0 "어리석게도, 영국의 애완견들은 우리의 정당한 주장을 거부합니다."
 afg.4.a:0 "전쟁은 계속된다!"
 
-afg.5.t:0 "시아파 무슬림이 전쟁을 피한다"
-afg.5.d:0 "수십 년 동안 아프가니스탄에서 시아파 소수 민족의 상황은 나빴으며 전후 상황은 금빛이 아니었고, 또 다른 전쟁은 상황이 더 악화될 수밖에 없었다. 헤라트와 Farah 지역의 시아파 이맘은 시아파 소수 민족이 시아파의 이웃인 페르시아로 피신할 수 있도록 시아파를 격려해 주었다. 페르시아인들이 그들을 돌려보내길 바란다. 우리는 그 인력이 필요하다."
-afg.5.a:0 "반역자 !"
+afg.5.t:0 "시아파 무슬림이 전쟁을 피하다"
+afg.5.d:0 "수십 년 동안 아프가니스탄에서 시아파 소수 민족의 상황은 나빴으며 전후 상황은 금빛이 아니었고, 또 다른 전쟁은 상황이 더 악화될 수밖에 없었습니다. 헤라트와 파라 지역의 시아파 이맘은 시아파 소수 민족이 시아파의 이웃인 페르시아로 피신할 수 있도록 시아파를 격려해 주었습니다. 페르시아인들이 그들을 돌려보내길 바랍니다. 우리는 그 인력이 필요합니다."
+afg.5.a:0 "반역자!"
 
 afg.6.t:0 "아프가니스탄 난민"
-afg.6.d:0 "그러나 또 다른 전쟁이 아프가니스탄과 델리 사이에 시작되었다. 아프가니스탄의 소수 민족인 시아파는 자신들의 상황이 더 악화될 것을 두려워하기 때문에 새로운 삶을 시작하기로 결정했다, 그러나 이 상황은 우리가 생각하는 것보다 더 문제가 될 수 있다. 우리가 이 사람들을 우리나라로 받아들인다면 아프가니스탄 정부는 우리에게 깊은 분노를 느낄 것이다."
+afg.6.d:0 "그러나 또 다른 전쟁이 아프가니스탄과 델리 사이에 시작되었습니다. 아프가니스탄의 소수 민족인 시아파는 자신들의 상황이 더 악화될 것을 두려워하여 새로운 삶을 시작하기로 결정했습니다. 그러나 이 상황은 우리가 생각하는 것보다 더 문제가 될 수 있습니다. 우리가 이 사람들을 우리나라로 받아들인다면 아프가니스탄 정부는 우리에게 깊은 분노를 느낄 것입니다."
 afg.6.a:0 "그들에게 환영보다 더 많은 것을 해야 된다, 마슈하드에 그들을 정착시켜야 한다!"
 afg.6.b:0 "이것은 아프가니스탄 국내 정치에 간섭 할 것이다, 그들을 거부한다!"
 
 afg.7.t:0 "페르시아가 국경을 폐쇄하다"
-afg.7.d:0 "페르시아인들은 옳은 선택을 했고 우리 국민들을 고국으로 돌려보냈다."
+afg.7.d:0 "페르시아인들은 옳은 선택을 했고 우리 국민들을 고국으로 돌려보냈습니다."
 afg.7.a:0 "만세!"
 
 afg.8.t:0 "아프가니스탄 패배의 국내 반응"
-afg.8.d:0 "우리 군대의 패배는 아프가니스탄에 충격을 주었다. 우리의 첩보 기관은 농민과 군대 모두가 정부에 대한 엄청난 불만을 보고하고 있다! 심지어 급진적인 성직자들 조차도 왕가의 개혁 프로그램에 대한 일반적인 반란에 대한 지지를 얻어내고 있다! 이것들은 우리의 작은 왕국에게는 정말 어두운 시대이다."
+afg.8.d:0 "우리 군대의 패배는 아프가니스탄에 충격을 주었습니다. 우리의 첩보 기관은 농민과 군대 모두가 정부에 대한 엄청난 불만을 보고하고 있습니다! 심지어 급진적인 성직자들조차도 왕가의 개혁 프로그램에 대한 일반적인 반란에 대한 지지를 얻어내고 있습니다! 이것들은 우리의 작은 왕국에게는 정말 어두운 시대입니다."
 afg.8.a:0 "왕은 그가 좋아하는 대로 할 수 있다! 반란을 진압해라!"
 afg.8.c:0 "모하메드 나디르는 아마눌라를 퇴위시키고 자신을 왕으로 선언한다!"
 
 afg.9.t:0 "아프가니스탄의 질서"
-afg.9.d:0 "아프가니스탄은 반란을 일으킬 수 없다."
+afg.9.d:0 "아프가니스탄은 반란을 일으킬 수 없습니다."
 afg.9.a:0 "더 나은 내일을 기대한다."
 
 afg.10.t:0 "혼돈 속의 아프가니스탄!"
-afg.10.d:0 "최선의 노력에도 불구하고, 반군 세력이 카불에서 아마눌라 왕의 군대를 밀어 내고 국가를 장악하였다!"
+afg.10.d:0 "최선의 노력에도 불구하고, 반군 세력이 카불에서 아마눌라 왕의 군대를 밀어 내고 국가를 장악하였습니다!"
 afg.10.b:0 "나 장군의 여단은 모든 저항을 물리치고 그를 왕으로 선포한다!"
 
 afg.14.t:0 "모하메드 나디르 샤의 왕좌 주장"
-afg.14.d:0 "그렇게 우호적인 방법이 아니고 왕실과의 관계에도 불구하고 왕좌를 차지한, 모하메드 나디르 샤는 그의 정권을 지지하기 위해 합법성을 절실히 필요로 한다. 파슈툰인 지도자들이 폐하의 승천을 지지하기 위해 'loya jirga'(왕의 통치)를 전하는 것이 좋습니다."
-afg.14.a:0 "승천을 확인하기 위해 loya jirga를 불러라!"
+afg.14.d:0 "그렇게 우호적인 방법이 아니고 왕실과의 관계에도 불구하고 왕좌를 차지한, 모하메드 나디르 샤는 그의 정권을 뒷받침하기 위해 합법성을 절실히 필요로 합니다. 파슈툰인 지도자들이 폐하의 승천을 지지하기 위해 '로야 지르가'(왕의 통치)를 전하는 것이 좋습니다."
+afg.14.a:0 "승천을 확인하기 위해 로야 지르가를 불러라!"
 
-afg.15.t:0 "모하메드 나디르 샤와 Loya Jirga"
-afg.15.d:0 "부족 지도자들의 총회에서 연설을 한 나디르 샤는 그의 통치를 방해받지 않고 계속할 수 있는 충분한 지지를 받기를 희망한다."
+afg.15.t:0 "모하메드 나디르 샤와 로야 지르가"
+afg.15.d:0 "부족 지도자들의 총회에서 연설을 한 나디르 샤는 그의 통치가 방해받지 않고 계속될 수 있도록 충분한 지지를 받기를 희망합니다."
 afg.15.a:0 "의회는 모하메드 나디르를 왕으로 추대한다!"
 afg.15.b:0 "의회는 모하메드 나디르를 쫓아낸다!"
 
 afg.16.t:0 "나디르 샤의 왕립 과두정"
-afg.16.d:0 "전쟁으로 파괴된 국가가 마침내 어떤 종류의 질서와 흡사하게, 나디르 샤는 아프가니스탄의 안정을 유지하기 위해 내각을 재구성하기로 결심했다. 정부를 친척들과 나누는 것은 국가 기구를 나디르의 야망에 묶어 주는 명백한 방법일 것이다, 하지만 아마눌라의 지지자들은 급진적이고 온건한 개혁파들 사이의 격차를 해소할 수 있다."
+afg.16.d:0 "전쟁으로 파괴된 국가가 마침내 어떤 종류의 질서와 흡사하게, 나디르 샤는 아프가니스탄의 안정을 유지하기 위해 내각을 재구성하기로 결심했습니다. 정부를 친척들과 나누는 것은 국가 기구를 나디르의 야망에 묶어 주는 명백한 방법일 것입니다. 하지만 아마눌라의 지지자들은 급진적이고 온건한 개혁파들 사이의 격차를 해소할 수 있습니다."
 afg.16.a:0 "내 남동생인 샤 왈리 칸이 내 의지를 이행하게 하라!"
-afg.16.b:0 "내 동생 무함메드 하심이 정부를 이끌것이다!"
+afg.16.b:0 "내 동생 무함메드 하심이 정부를 이끌 것이다!"
 afg.16.c:0 "온건한 학문의 무하마드 고바르가 내각을 이끌어야 한다!"
 afg.16.e:0 "아마눌라의 파벌을 지지하고 압둘 하디 다와이를 지명한다!"
 afg.16.f:0 "모든 건 왕이 관리한다! 나는 전적으로 모든 행정력을 휘두를 것이다!"
 
 afg.17.t:0 "아마눌라 개혁의 상태"
-afg.17.d:0 "모하메드 나디르 샤는 아프간을 발전시키지 못한 아마눌라 칸의 실패 이후 우리의 흔들린 국가를 장악했다. 그의 전임자의 몰락의 커다란 원인은 그의 서구화 개혁의 속도였다. 나디르 는 아프가니스탄 재건이라는 커다란 문제를 해결해야 한다."
+afg.17.d:0 "모하메드 나디르 샤는 아프간을 발전시키지 못한 아마눌라 칸의 실패 이후 불안정한 국가를 장악했습니다. 그의 전임자가 몰락한 커다란 원인은 서구화 개혁의 속도였습니다. 나디르 샤는 아프가니스탄 재건이라는 커다란 문제를 해결해야 한다."
 afg.17.a:0 "사회 개혁을 중단하되, 우리의 기반 시설을 개선하자!"
 afg.17.b:0 "동굴안의 전통주의자들에게 현대성의 모든 가식을 버리게 한다!"
 afg.17.c:0 "나는 아마눌라가 실패한 아프가니스탄을 현대 세계로 가져오는 것을 성공할 것이다!"
 
-afg.18.t:0 "환금업자가 아프가니스탄을 떠났다"
-afg.18.d:0 "환금업자는 아프가니스탄과 델리를 오가며 돈을 교환하고 상품을 교역하는 인도 상인들이다. 우리 경제는 그들의 방문에 거의 의존하고 있다. 이제, 전쟁이 일어났고 국경은 더 이상 안전하지 않다. 환금업자들 중 몇 명만이 우리와 거래를 계속할 만큼 용감하다. 그들의 대부분의 상단들이 사라졌기 때문에 우리는 이제 경제 위기로 고통 받고 있다."
+afg.18.t:0 "환금업자가 아프가니스탄을 떠나다"
+afg.18.d:0 "환금업자는 아프가니스탄과 델리를 오가며 돈을 교환하고 상품을 교역하는 인도 상인들입니다. 우리 경제는 그들의 방문에 거의 의존하고 있습니다. 이제, 전쟁이 일어났고 국경은 더 이상 안전하지 않습니다. 환금업자들 중 몇 명만이 우리와 거래를 계속할 만큼 용감합니다. 그들 대부분의 상단들이 사라졌기 때문에 우리는 이제 경제 위기로 고통 받고 있습니다."
 afg.18.a:0 "어쨌든 우리는 이런 인도의 개들이 필요하지 않다!"
 
 afg.19.t:0 "환금업자가 돌아오다"
-afg.19.d:0 "전쟁은 끝났고 국경은 이제 안전하다. 이제는 환금업자들을 방해하는 것이 더 이상 없으며, 그들의 첫번째 물결은 이미 아프가니스탄 내에서 거래를 재개했다. 곧, 우리 경제는 회복될 것이다."
+afg.19.d:0 "전쟁은 끝났고 국경은 이제 안전합니다. 이제는 환금업자들을 방해하는 것이 더 이상 없으며, 그들의 첫번째 물결은 이미 아프가니스탄 내에서 거래를 재개했습니다. 곧, 우리 경제는 회복될 것입니다."
 afg.19.a:0 "어서 오십시오, 여러분!"
 
 ### Parties ###
@@ -108,4 +108,3 @@ AFG_national_populist_party_long:0 "급진 이슬람주의자"
 
 ### Tooltips ###
 AFG_chaos_tooltip:0 "이 선택은 아프가니스탄을 반란의 혼란에 빠뜨릴 것입니다. 정부가 무너지면 급진파 이슬람교도 나디르 샤가 이 나라를 통치하게 됩니다." #into chaos of rebellion? what?
-
