--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -739,7 +739,7 @@ annex.181.b:0 "Break off Piratini and liberate the rest of Brazil"
 annex.182.t:0 "라플라타의 운명"
 annex.182.d:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. A question that we will have to solve is: Should we liberate Paraguay and Uruguay that were conquered by the aggressive Argentinians in 1935?"
 annex.182.a:0 "라플라타 전체를 해방하라"
-annex.182.b:0 "파라과이, 우루과이 그리고 아르헨티라를 해방하라"
+annex.182.b:0 "파라과이, 우루과이 그리고 아르헨티를 해방하라"
 annex.183.t:0 "조선의 운명"
 annex.183.d:0 "자랑스러운 한민족의 해방 이후 우리는 정복한 한국의 정부를 조직 할 책임이 있습니다. 무엇을 해야할까요?"
 annex.183.a:0 "왕실 한국을 해방하라!"
