인명 겸 오타 수정

--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1039,7 +1039,7 @@ amcivwar.324.t:0 "세인트루이스 수복"
 amcivwar.324.d:0 "우리는 적들로부터 세인트루이스를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
 amcivwar.324.a:0 "도시는 다시 우리의 것이다."
 amcivwar.32400.t:0 "세인트루이스에서의 격렬한 전투"
-amcivwar.32400.d:0 "세인트루이스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다.""
+amcivwar.32400.d:0 "세인트루이스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.325.t:0 "볼티모어 점령"
 amcivwar.325.d:0 "우리는 적들로부터 볼티모어를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
 amcivwar.325.a:0 "기회를 잡아라."
