--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -8,7 +8,7 @@ austrian_sphere:0 "오스트리아 영역권"
 AUS_economy_ready_tooltip:0 "우리는 경제의 선진화를 준비해야 합니다. \n\n 이는 당연히 현재 우리에게 닥친 경제 위기를 극복해야 한다는 것을 의미합니다."
 
 AUS_military_occupation_tooltip:0 "계속해서 헝가리 땅을 점령하게 될 것이지만, 모든 속국들이 이에 만족하지는 않을 것입니다. \n\n"
-AUS_danubian_federation_tooltip:0 ""다뉴브, 알프스 및 아드리아 연맹"이 형성 될 것입니다. \n\n"
+AUS_danubian_federation_tooltip:0 "다뉴브, 알프스 및 아드리아 연맹"이 형성 될 것입니다. \n\n"
 AUS_united_states_tooltip:0 "'대 오스트리아 합중국'이 형성 될 것입니다. \n\n"
 AUS_dualism_restored_tooltip:0 "헝가리는 통합될 것이고, 오스트리아-헝가리 제국이 다시 형성될 것입니다. \n\n"
 
