--- a/Kaiserreich Korean Translation/localisation/KR_Ministers_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ministers_l_english.yml
@@ -19170,7 +19170,7 @@
 	 FRA_Marcel_Cachin_for_tot:0 "마르셀 카섕"
 	 Marcel_Cachin_dead:0 " is incapable of holding any posts."
 	 Marcel_Cachin_for_fired:0 " is incapable of holding this post."
-	 FRA_Marcel_Gitton_for_tot:0 "Marcel Gitton"
+	 FRA_Marcel_Gitton_for_tot:0 "마르셀 지통"
 	 Marcel_Gitton_dead:0 " is incapable of holding any posts."
 	 Marcel_Gitton_for_fired:0 " is incapable of holding this post."
 	 FRA_Maurice_Thorez_for_tot:0 "모리스 토레즈"
@@ -19191,7 +19191,7 @@
 	 FRA_Joseph_Paul_Boncour_for_syn:0 "조제프 폴 봉쿠르"
 	 Joseph_Paul_Boncour_dead:0 " is incapable of holding any posts."
 	 Joseph_Paul_Boncour_for_fired:0 " is incapable of holding this post."
-	 FRA_Laurent_Casenove_for_syn:0 "Laurent Casenove"
+	 FRA_Laurent_Casenove_for_syn:0 "로랑 카사노바"
 	 Laurent_Casenove_dead:0 " is incapable of holding any posts."
 	 Laurent_Casenove_for_fired:0 " is incapable of holding this post."
 	 FRA_Pierre_Brossolette_for_syn:0 "Pierre Brossolette"
@@ -19227,13 +19227,13 @@
 	 FRA_Pierre_Etienne_Flandin_for_sli:0 "피에르 에티엔 플랑댕"
 	 Pierre_Etienne_Flandin_dead:0 " is incapable of holding any posts."
 	 Pierre_Etienne_Flandin_for_fired:0 " is incapable of holding this post."
-	 FRA_Yvon_Delbos_for_sli:0 "Yvon Delbos"
+	 FRA_Yvon_Delbos_for_sli:0 "이봉 델보"
 	 Yvon_Delbos_dead:0 " is incapable of holding any posts."
 	 Yvon_Delbos_for_fired:0 " is incapable of holding this post."
 	 FRA_George_Bidault_for_mli:0 "조르주 비도"
 	 George_Bidault_dead:0 " is incapable of holding any posts."
 	 George_Bidault_for_fired:0 " is incapable of holding this post."
-	 FRA_Maurice_Dejean_for_mli:0 "Maurice Dejean"
+	 FRA_Maurice_Dejean_for_mli:0 "모리스 드장"
 	 Maurice_Dejean_dead:0 " is incapable of holding any posts."
 	 Maurice_Dejean_for_fired:0 " is incapable of holding this post."
 	 FRA_Rene_Pleven_for_mli:0 "르네 플르뱅"
@@ -19251,7 +19251,7 @@
 	 FRA_Rene_Lucien_Massigli_for_sco:0 "르네 뤼시앙 마시글리"
 	 Rene_Lucien_Massigli_dead:0 " is incapable of holding any posts."
 	 Rene_Lucien_Massigli_for_fired:0 " is incapable of holding this post."
-	 FRA_Maurice_Bourges_Maunoroy_for_ade:0 "Maurice Bourges Maunoroy"
+	 FRA_Maurice_Bourges_Maunoroy_for_ade:0 "모리스 부르주 모누리"
 	 Maurice_Bourges_Maunoroy_dead:0 " is incapable of holding any posts."
 	 Maurice_Bourges_Maunoroy_for_fired:0 " is incapable of holding this post."
 
@@ -19259,7 +19259,7 @@
 	 FRA_Ambroise_Croizat_eco_tot:0 "Ambroise Croizat"
 	 Ambroise_Croizat_dead:0 " is incapable of holding any posts."
 	 Ambroise_Croizat_eco_fired:0 " is incapable of holding this post."
-	 FRA_Auguste_Lecoeur_eco_tot:0 "Auguste Lecoeur"
+	 FRA_Auguste_Lecoeur_eco_tot:0 "오귀스트 르쾨르"
 	 Auguste_Lecoeur_dead:0 " is incapable of holding any posts."
 	 Auguste_Lecoeur_eco_fired:0 " is incapable of holding this post."
 	 FRA_Georges_Levy_eco_tot:0 "조르주 레비"
@@ -19289,7 +19289,7 @@
 	 FRA_Leon_Jouhaux_eco_syn:0 "레옹 주오"
 	 Leon_Jouhaux_dead:0 " is incapable of holding any posts."
 	 Leon_Jouhaux_eco_fired:0 " is incapable of holding this post."
-	 FRA_Laurent_Casenove_eco_syn:0 "Laurent Casenove"
+	 FRA_Laurent_Casenove_eco_syn:0 "로랑 카사노바"
 	 Laurent_Casenove_dead:0 " is incapable of holding any posts."
 	 Laurent_Casenove_eco_fired:0 " is incapable of holding this post."
 	 FRA_Pierre_Monatte_eco_syn:0 "Pierre Monatte"
@@ -19370,13 +19370,13 @@
 	 FRA_Louis_Armand_eco_sco:0 "루이 아르망"
 	 Louis_Armand_dead:0 " is incapable of holding any posts."
 	 Louis_Armand_eco_fired:0 " is incapable of holding this post."
-	 FRA_Marie_Emile_Fayolle_eco_sco:0 "Marie Emile Fayolle"
+	 FRA_Marie_Emile_Fayolle_eco_sco:0 "마리 에밀 파욜"
 	 Marie_Emile_Fayolle_dead:0 " is incapable of holding any posts."
 	 Marie_Emile_Fayolle_eco_fired:0 " is incapable of holding this post."
 	 FRA_Marie_Pierre_Koenig_eco_sco:0 "마리 피에르 쾨니그"
 	 Marie_Pierre_Koenig_dead:0 " is incapable of holding any posts."
 	 Marie_Pierre_Koenig_eco_fired:0 " is incapable of holding this post."
-	 FRA_Paul_Marchandeau_eco_sco:0 "Paul Marchandeau"
+	 FRA_Paul_Marchandeau_eco_sco:0 "폴 마르샹도"
 	 Paul_Marchandeau_dead:0 " is incapable of holding any posts."
 	 Paul_Marchandeau_eco_fired:0 " is incapable of holding this post."
 	 FRA_Jacques_de_Guillebon_eco_ade:0 "Jacques de Guillebon"
@@ -19447,7 +19447,7 @@
 	 FRA_Andre_Le_Troquer_sec_sde:0 "앙드레 르 트로케"
 	 Andre_Le_Troquer_dead:0 " is incapable of holding any posts."
 	 Andre_Le_Troquer_sec_fired:0 " is incapable of holding this post."
-	 FRA_Jules_Moch_sec_sde:0 "Jules Moch"
+	 FRA_Jules_Moch_sec_sde:0 "쥘 모흐"
 	 Jules_Moch_dead:0 " is incapable of holding any posts."
 	 Jules_Moch_sec_fired:0 " is incapable of holding this post."
 	 FRA_Pierre_Auguste_Chardigny_sec_sde:0 "Pierre Auguste Chardigny"
@@ -19471,7 +19471,7 @@
 	 FRA_Pierre_Pene_sec_sli:0 "Pierre Pené"
 	 Pierre_Pene_dead:0 " is incapable of holding any posts."
 	 Pierre_Pene_sec_fired:0 " is incapable of holding this post."
-	 FRA_Yvon_Delbos_sec_sli:0 "Yvon Delbos"
+	 FRA_Yvon_Delbos_sec_sli:0 "이봉 델보"
 	 Yvon_Delbos_dead:0 " is incapable of holding any posts."
 	 Yvon_Delbos_sec_fired:0 " is incapable of holding this post."
 	 FRA_Robert_Schumann_sec_mli:0 "로베르 쉬망"
@@ -19712,7 +19712,7 @@
 	 FRA_Marcel_Deat_cair_tot:0 "Marcel Déat"
 	 Marcel_Deat_dead:0 " is incapable of holding any posts."
 	 Marcel_Deat_cair_fired:0 " is incapable of holding this post."
-	 FRA_Marcel_Gitton_cair_tot:0 "Marcel Gitton"
+	 FRA_Marcel_Gitton_cair_tot:0 "마르셀 지통"
 	 Marcel_Gitton_dead:0 " is incapable of holding any posts."
 	 Marcel_Gitton_cair_fired:0 " is incapable of holding this post."
 	 FRA_Antoine_de_Saint_Exupery_cair_syn:0 "Antoine de Saint Exupéry"
@@ -19754,7 +19754,7 @@
 	 FRP_Marcel_Cachin_hog_tot:0 "마르셀 카섕"
 	 Marcel_Cachin_dead:0 " is incapable of holding any posts."
 	 Marcel_Cachin_hog_fired:0 " is incapable of holding this post."
-	 FRP_Edgar_Faure_hog_sde:0 "Edgar Faure"
+	 FRP_Edgar_Faure_hog_sde:0 "에드가르 포르"
 	 Edgar_Faure_dead:0 " is incapable of holding any posts."
 	 Edgar_Faure_hog_fired:0 " is incapable of holding this post."
 	 FRP_Edouard_Daladier_hog_sde:0 "에두아르 달라디에"
@@ -19775,19 +19775,19 @@
 	 FRP_Camille_Chautemps_hog_sli:0 "카미유 쇼탕"
 	 Camille_Chautemps_dead:0 " is incapable of holding any posts."
 	 Camille_Chautemps_hog_fired:0 " is incapable of holding this post."
-	 FRP_Georges_Clemenceau_hog_sli:0 "Georges Clemenceau"
+	 FRP_Georges_Clemenceau_hog_sli:0 "조르주 클레망소"
 	 Georges_Clemenceau_dead:0 " is incapable of holding any posts."
 	 Georges_Clemenceau_hog_fired:0 " is incapable of holding this post."
 	 FRP_Louis_Georges_Mandel_hog_sli:0 "루이 조르주 망델"
 	 Louis_Georges_Mandel_dead:0 " is incapable of holding any posts."
 	 Louis_Georges_Mandel_hog_fired:0 " is incapable of holding this post."
-	 FRP_Rene_Mayer_hog_sli:0 "René Mayer"
+	 FRP_Rene_Mayer_hog_sli:0 "르네 마예르"
 	 Rene_Mayer_dead:0 " is incapable of holding any posts."
 	 Rene_Mayer_hog_fired:0 " is incapable of holding this post."
 	 FRP_Robert_Schumann_hog_sli:0 "로베르 쉬망"
 	 Robert_Schumann_dead:0 " is incapable of holding any posts."
 	 Robert_Schumann_hog_fired:0 " is incapable of holding this post."
-	 FRP_Antoine_Pinay_hog_mli:0 "Antoine Pinay"
+	 FRP_Antoine_Pinay_hog_mli:0 "앙트완 피네"
 	 Antoine_Pinay_dead:0 " is incapable of holding any posts."
 	 Antoine_Pinay_hog_fired:0 " is incapable of holding this post."
 	 FRP_Georges_Bidault_hog_mli:0 "조르주 비도"
@@ -19811,16 +19811,16 @@
 	 FRP_Jean_Marie_Lattre_de_Tassigny_hog_sco:0 "장 마리 라트르 드 타시니"
 	 Jean_Marie_Lattre_de_Tassigny_dead:0 " is incapable of holding any posts."
 	 Jean_Marie_Lattre_de_Tassigny_hog_fired:0 " is incapable of holding this post."
-	 FRP_Joseph_Laniel_hog_sco:0 "Joseph Laniel"
+	 FRP_Joseph_Laniel_hog_sco:0 "조제프 라니엘"
 	 Joseph_Laniel_dead:0 " is incapable of holding any posts."
 	 Joseph_Laniel_hog_fired:0 " is incapable of holding this post."
 	 FRP_Pierre_Laval_hog_sco:0 "피에르 라발"
 	 Pierre_Laval_dead:0 " is incapable of holding any posts."
 	 Pierre_Laval_hog_fired:0 " is incapable of holding this post."
-	 FRP_Zinovy_Peshkov_hog_sco:0 "Zinovy Peshkov"
+	 FRP_Zinovy_Peshkov_hog_sco:0 "지노비 페시코프"
 	 Zinovy_Peshkov_dead:0 " is incapable of holding any posts."
 	 Zinovy_Peshkov_hog_fired:0 " is incapable of holding this post."
-	 FRP_Zinovy_Peshkov_hog_ade:0 "Zinovy Peshkov"
+	 FRP_Zinovy_Peshkov_hog_ade:0 "지노비 페시코프"
 	 Zinovy_Peshkov_dead:0 " is incapable of holding any posts."
 	 Zinovy_Peshkov_hog_fired:0 " is incapable of holding this post."
 
@@ -19828,13 +19828,13 @@
 	 FRP_Jacques_Duclos_for_tot:0 "자크 뒤클로"
 	 Jacques_Duclos_dead:0 " is incapable of holding any posts."
 	 Jacques_Duclos_for_fired:0 " is incapable of holding this post."
-	 FRP_Laurent_Casenove_for_tot:0 "Laurent Casenove"
+	 FRP_Laurent_Casenove_for_tot:0 "로랑 카사노바"
 	 Laurent_Casenove_dead:0 " is incapable of holding any posts."
 	 Laurent_Casenove_for_fired:0 " is incapable of holding this post."
 	 FRP_Marcel_Cachin_for_tot:0 "마르셀 카섕"
 	 Marcel_Cachin_dead:0 " is incapable of holding any posts."
 	 Marcel_Cachin_for_fired:0 " is incapable of holding this post."
-	 FRP_Marcel_Gitton_for_tot:0 "Marcel Gitton"
+	 FRP_Marcel_Gitton_for_tot:0 "마르셀 지통"
 	 Marcel_Gitton_dead:0 " is incapable of holding any posts."
 	 Marcel_Gitton_for_fired:0 " is incapable of holding this post."
 	 FRP_Edouard_Daladier_for_sde:0 "에두아르 달라디에"
@@ -19855,13 +19855,13 @@
 	 FRP_Pierre_Etienne_Flandin_for_sli:0 "피에르 에티엔 플랑댕"
 	 Pierre_Etienne_Flandin_dead:0 " is incapable of holding any posts."
 	 Pierre_Etienne_Flandin_for_fired:0 " is incapable of holding this post."
-	 FRP_Yvon_Delbos_for_sli:0 "Yvon Delbos"
+	 FRP_Yvon_Delbos_for_sli:0 "이봉 델보"
 	 Yvon_Delbos_dead:0 " is incapable of holding any posts."
 	 Yvon_Delbos_for_fired:0 " is incapable of holding this post."
 	 FRP_George_Bidault_for_mli:0 "조르주 비도"
 	 George_Bidault_dead:0 " is incapable of holding any posts."
 	 George_Bidault_for_fired:0 " is incapable of holding this post."
-	 FRP_Maurice_Dejean_for_mli:0 "Maurice Dejean"
+	 FRP_Maurice_Dejean_for_mli:0 "모리스 드장"
 	 Maurice_Dejean_dead:0 " is incapable of holding any posts."
 	 Maurice_Dejean_for_fired:0 " is incapable of holding this post."
 	 FRP_Rene_Pleven_for_mli:0 "르네 플르뱅"
@@ -19888,15 +19888,15 @@
 	 FRP_Charles_Emmanuel_Mast_for_ade:0 "샤를 에마뉘엘 마스"
 	 Charles_Emmanuel_Mast_dead:0 " is incapable of holding any posts."
 	 Charles_Emmanuel_Mast_for_fired:0 " is incapable of holding this post."
-	 FRP_Maurice_Bourges_Maunoroy_for_ade:0 "Maurice Bourges Maunoroy"
+	 FRP_Maurice_Bourges_Maunoroy_for_ade:0 "모리스 부르주 모누리"
 	 Maurice_Bourges_Maunoroy_dead:0 " is incapable of holding any posts."
 	 Maurice_Bourges_Maunoroy_for_fired:0 " is incapable of holding this post."
 
 	### Economy Minister ###
-	 FRP_Auguste_Lecoeur_eco_tot:0 "Auguste Lecoeur"
+	 FRP_Auguste_Lecoeur_eco_tot:0 "오귀스트 르쾨르"
 	 Auguste_Lecoeur_dead:0 " is incapable of holding any posts."
 	 Auguste_Lecoeur_eco_fired:0 " is incapable of holding this post."
-	 FRP_Benoit_Frachon_eco_tot:0 "Benoit Frachon"
+	 FRP_Benoit_Frachon_eco_tot:0 "브누아 프라숑"
 	 Benoit_Frachon_dead:0 " is incapable of holding any posts."
 	 Benoit_Frachon_eco_fired:0 " is incapable of holding this post."
 	 FRP_Daniel_Renoult_eco_tot:0 "Daniel Renoult"
@@ -19908,7 +19908,7 @@
 	 FRP_Jean_Jerome_eco_tot:0 "Jean Jerome"
 	 Jean_Jerome_dead:0 " is incapable of holding any posts."
 	 Jean_Jerome_eco_fired:0 " is incapable of holding this post."
-	 FRP_Laurent_Casenove_eco_tot:0 "Laurent Casenove"
+	 FRP_Laurent_Casenove_eco_tot:0 "로랑 카사노바"
 	 Laurent_Casenove_dead:0 " is incapable of holding any posts."
 	 Laurent_Casenove_eco_fired:0 " is incapable of holding this post."
 	 FRP_Andre_Le_Troquer_eco_sde:0 "앙드레 르 트로케"
@@ -19920,13 +19920,13 @@
 	 FRP_Guy_Mollet_eco_sde:0 "기 몰레"
 	 Guy_Mollet_dead:0 " is incapable of holding any posts."
 	 Guy_Mollet_eco_fired:0 " is incapable of holding this post."
-	 FRP_Jean_Louis_Barthou_eco_sde:0 "Jean 루이 바르투"
+	 FRP_Jean_Louis_Barthou_eco_sde:0 "장 루이 바르투"
 	 Jean_Louis_Barthou_dead:0 " is incapable of holding any posts."
 	 Jean_Louis_Barthou_eco_fired:0 " is incapable of holding this post."
-	 FRP_Jules_Moch_eco_sde:0 "Jules Moch"
+	 FRP_Jules_Moch_eco_sde:0 "쥘 모흐"
 	 Jules_Moch_dead:0 " is incapable of holding any posts."
 	 Jules_Moch_eco_fired:0 " is incapable of holding this post."
-	 FRP_Leon_Jouhaux_eco_sde:0 "Leon Jouhaux"
+	 FRP_Leon_Jouhaux_eco_sde:0 "레옹 주오"
 	 Leon_Jouhaux_dead:0 " is incapable of holding any posts."
 	 Leon_Jouhaux_eco_fired:0 " is incapable of holding this post."
 	 FRP_Albert_Sarraut_eco_sli:0 "알베르 사로"
@@ -19947,7 +19947,7 @@
 	 FRP_Raoul_Dautry_eco_sli:0 "Raoul Dautry"
 	 Raoul_Dautry_dead:0 " is incapable of holding any posts."
 	 Raoul_Dautry_eco_fired:0 " is incapable of holding this post."
-	 FRP_Rene_Mayer_eco_sli:0 "René Mayer"
+	 FRP_Rene_Mayer_eco_sli:0 "르네 마예르"
 	 Rene_Mayer_dead:0 " is incapable of holding any posts."
 	 Rene_Mayer_eco_fired:0 " is incapable of holding this post."
 	 FRP_Vincent_Auriol_eco_sli:0 "뱅상 오리올"
@@ -19989,13 +19989,13 @@
 	 FRP_Louis_Armand_eco_sco:0 "루이 아르망"
 	 Louis_Armand_dead:0 " is incapable of holding any posts."
 	 Louis_Armand_eco_fired:0 " is incapable of holding this post."
-	 FRP_Marie_Emile_Fayolle_eco_sco:0 "Marie Emile Fayolle"
+	 FRP_Marie_Emile_Fayolle_eco_sco:0 "마리 에밀 파욜"
 	 Marie_Emile_Fayolle_dead:0 " is incapable of holding any posts."
 	 Marie_Emile_Fayolle_eco_fired:0 " is incapable of holding this post."
 	 FRP_Marie_Pierre_Koenig_eco_sco:0 "마리 피에르 쾨니그"
 	 Marie_Pierre_Koenig_dead:0 " is incapable of holding any posts."
 	 Marie_Pierre_Koenig_eco_fired:0 " is incapable of holding this post."
-	 FRP_Paul_Marchandeau_eco_sco:0 "Paul Marchandeau"
+	 FRP_Paul_Marchandeau_eco_sco:0 "폴 마르샹도"
 	 Paul_Marchandeau_dead:0 " is incapable of holding any posts."
 	 Paul_Marchandeau_eco_fired:0 " is incapable of holding this post."
 	 FRP_Jacques_de_Guillebon_eco_ade:0 "Jacques de Guillebon"
@@ -20048,7 +20048,7 @@
 	 FRP_Jean_Maillet_sec_sli:0 "Jean Maillet"
 	 Jean_Maillet_dead:0 " is incapable of holding any posts."
 	 Jean_Maillet_sec_fired:0 " is incapable of holding this post."
-	 FRP_Jules_Moch_sec_sli:0 "Jules Moch"
+	 FRP_Jules_Moch_sec_sli:0 "쥘 모흐"
 	 Jules_Moch_dead:0 " is incapable of holding any posts."
 	 Jules_Moch_sec_fired:0 " is incapable of holding this post."
 	 FRP_Louis_Georges_Mandel_sec_sli:0 "루이 조르주 망델"
@@ -20060,7 +20060,7 @@
 	 FRP_Pierre_Pene_sec_sli:0 "Pierre Pené"
 	 Pierre_Pene_dead:0 " is incapable of holding any posts."
 	 Pierre_Pene_sec_fired:0 " is incapable of holding this post."
-	 FRP_Yvon_Delbos_sec_sli:0 "Yvon Delbos"
+	 FRP_Yvon_Delbos_sec_sli:0 "이봉 델보"
 	 Yvon_Delbos_dead:0 " is incapable of holding any posts."
 	 Yvon_Delbos_sec_fired:0 " is incapable of holding this post."
 	 FRP_Andre_Marie_sec_mli:0 "앙드레 마리"
@@ -20116,7 +20116,7 @@
 	 FRP_Daniel_Mayer_int_sde:0 "Daniel Mayer"
 	 Daniel_Mayer_dead:0 " is incapable of holding any posts."
 	 Daniel_Mayer_int_fired:0 " is incapable of holding this post."
-	 FRP_Edgar_Faure_int_sde:0 "Edgar Faure"
+	 FRP_Edgar_Faure_int_sde:0 "에드가르 포르"
 	 Edgar_Faure_dead:0 " is incapable of holding any posts."
 	 Edgar_Faure_int_fired:0 " is incapable of holding this post."
 	 FRP_Felix_Gouin_int_sde:0 "펠릭스 구앵"
@@ -20134,7 +20134,7 @@
 	 FRP_Maurice_Delage_int_sli:0 "Maurice Delage"
 	 Maurice_Delage_dead:0 " is incapable of holding any posts."
 	 Maurice_Delage_int_fired:0 " is incapable of holding this post."
-	 FRP_Rene_Mayer_int_sli:0 "René Mayer"
+	 FRP_Rene_Mayer_int_sli:0 "르네 마예르"
 	 Rene_Mayer_dead:0 " is incapable of holding any posts."
 	 Rene_Mayer_int_fired:0 " is incapable of holding this post."
 	 FRP_Andre_Marie_int_mli:0 "앙드레 마리"
@@ -20244,7 +20244,7 @@
 	 FRP_Charles_Tillon_cair_tot:0 "Charles Tillon"
 	 Charles_Tillon_dead:0 " is incapable of holding any posts."
 	 Charles_Tillon_cair_fired:0 " is incapable of holding this post."
-	 FRP_Marcel_Gitton_cair_tot:0 "Marcel Gitton"
+	 FRP_Marcel_Gitton_cair_tot:0 "마르셀 지통"
 	 Marcel_Gitton_dead:0 " is incapable of holding any posts."
 	 Marcel_Gitton_cair_fired:0 " is incapable of holding this post."
 	 FRP_Marcel_Deat_cair_sde:0 "Marcel Deat"
@@ -36015,7 +36015,7 @@
 	 NFA_Edouard_Herriot_hog_sli:0 "Édouard Herriot"
 	 Edouard_Herriot_dead:0 " is incapable of holding any posts."
 	 Edouard_Herriot_hog_fired:0 " is incapable of holding this post."
-	 NFA_Antoine_Pinay_hog_sli:0 "Antoine Pinay"
+	 NFA_Antoine_Pinay_hog_sli:0 "앙트완 피네"
 	 Antoine_Pinay_dead:0 " is incapable of holding any posts."
 	 Antoine_Pinay_hog_fired:0 " is incapable of holding this post."
 	 NFA_Damien_Comte_de_Martel_hog_sli:0 "Damien Comte de Martel"
@@ -36145,7 +36145,7 @@
 	 NFA_Robert_Schumann_eco_mli:0 "로베르 쉬망"
 	 Robert_Schumann_dead:0 " is incapable of holding any posts."
 	 Robert_Schumann_eco_fired:0 " is incapable of holding this post."
-	 NFA_Paul_Marchandeau_eco_sco:0 "Paul Marchandeau"
+	 NFA_Paul_Marchandeau_eco_sco:0 "폴 마르샹도"
 	 Paul_Marchandeau_dead:0 " is incapable of holding any posts."
 	 Paul_Marchandeau_eco_fired:0 " is incapable of holding this post."
 	 NFA_Pierre_Henri_Teitgen_eco_sco:0 "Pierre Henri Teitgen"
